--- a/apendice2.tex
+++ b/apendice2.tex
@@ -79,3 +79,12 @@ exposta na Seção \ref{algs} são apresentados nas tabelas \ref{tab:balaccClassif0
 % \afterpage{\clearpage\begin{landscape}
 % \input stratsBalAccVFDT
 % \end{landscape}\clearpage}
+%
+\subsection{RF}
+\afterpage{\clearpage\begin{landscape}
+\input stratsALCKappaRF
+\end{landscape}\clearpage}
+
+% \afterpage{\clearpage\begin{landscape}
+% \input stratsBalAccRF
+% \end{landscape}\clearpage}
