--- a/stratsALCKappa5NN.tex
+++ b/stratsALCKappa5NN.tex
@@ -2,7 +2,7 @@
 \begin{table}[h]
 \caption{ALCKappa para 5NN: Os maiores valores da média e desvio padrão de cada base está em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados estão sublinhados. Os menores valores de desvio padrão estão em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
- & Rnd & Clu & Unc & Ent & Mar & EERent & EERacu & SGmulti & DWeuc & TUeuc & ATUeuc\\ \hline 1-abalone 3class &   0.29/  0.03 &   0.30/  0.03 &   0.31/  0.05 &   0.31/  0.05 &   0.31/  0.05 &   0.30/  0.05 &   0.29/  0.04 &   0.29/  0.03 & \textcolor{red}{\textbf{  0.28}}/  0.06 & \textcolor{blue}{\textbf{  0.32}}/  0.04 &   0.31/  0.03 \\
+ & Rnd & Clu & Unc & Ent & Mar & EERent & EERacu & \textbf{SGmulti} & DWeuc & TUeuc & \textbf{ATUeuc}\\ \hline 1-abalone 3class &   0.29/  0.03 &   0.30/  0.03 &   0.31/  0.05 &   0.31/  0.05 &   0.31/  0.05 &   0.30/  0.05 &   0.29/  0.04 &   0.29/  0.03 & \textcolor{red}{\textbf{  0.28}}/  0.06 & \textcolor{blue}{\textbf{  0.32}}/  0.04 &   0.31/  0.03 \\
 2-arcene &   0.58/\textcolor{black}{\textbf{  0.07}} &   0.57/  0.09 &   0.53/  0.10 &   0.52/  0.10 &   0.52/  0.10 &   0.59/  0.11 & \textcolor{red}{\textbf{  0.51}}/  0.10 &   0.58/\textcolor{black}{\textbf{  0.07}} &   0.59/  0.09 &   0.58/  0.09 &   0.60/  0.09 \\
 3-artificial charact... &   0.30/  0.02 &   0.30/  0.02 &   0.31/  0.02 &   0.31/  0.02 &   0.31/  0.02 &   0.32/  0.02 &   0.29/\textcolor{black}{\textbf{  0.01}} &   0.30/  0.02 & \textcolor{red}{\textbf{  0.26}}/  0.02 & \textcolor{blue}{\textbf{  0.34}}/  0.02 & \textcolor{blue}{\textbf{  0.34}}/  0.02 \\
 4-autoUniv au1 1000 &   0.09/  0.07 & \textcolor{red}{\textbf{  0.07}}/  0.05 & \textcolor{blue}{\textbf{  0.10}}/  0.05 & \textcolor{blue}{\textbf{  0.10}}/  0.05 &   0.08/  0.05 &   0.08/  0.05 & \textcolor{red}{\textbf{  0.07}}/  0.07 &   0.09/  0.07 &   0.09/  0.06 &   0.09/\textcolor{black}{\textbf{  0.04}} &   0.08/  0.05 \\
@@ -39,7 +39,7 @@
 \begin{table}[h]
 \caption{ALCKappa para 5NN: Os maiores valores da média e desvio padrão de cada base está em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados estão sublinhados. Os menores valores de desvio padrão estão em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c}
- & LUeuc & ALUeuc & TUman & ATUman & LUman & ALUman & TUmah & ATUmah & LUmah & ALUmah\\ \hline 1-abalone 3class &   0.31/  0.04 &   0.31/  0.03 &   0.31/  0.05 & \textcolor{blue}{\textbf{  0.32}}/  0.03 &   0.31/  0.04 &   0.31/\textcolor{black}{\textbf{  0.02}} &   0.31/  0.03 &   0.31/  0.03 &   0.31/\textcolor{black}{\textbf{  0.02}} &   0.30/\textcolor{black}{\textbf{  0.02}} \\
+ & \textbf{LUeuc} & \textbf{ALUeuc} & TUman & \textbf{ATUman} & \textbf{LUman} & \textbf{ALUman} & TUmah & \textbf{ATUmah} & \textbf{LUmah} & \textbf{ALUmah}\\ \hline 1-abalone 3class &   0.31/  0.04 &   0.31/  0.03 &   0.31/  0.05 & \textcolor{blue}{\textbf{  0.32}}/  0.03 &   0.31/  0.04 &   0.31/\textcolor{black}{\textbf{  0.02}} &   0.31/  0.03 &   0.31/  0.03 &   0.31/\textcolor{black}{\textbf{  0.02}} &   0.30/\textcolor{black}{\textbf{  0.02}} \\
 2-arcene &   0.58/  0.10 & \textcolor{blue}{\textbf{  0.62}}/  0.10 &   0.58/  0.09 & \textcolor{blue}{\textbf{  0.62}}/  0.11 &   0.59/  0.10 & \textcolor{blue}{\textbf{  0.62}}/  0.11 &   0.53/  0.10 &   0.58/  0.09 &   0.53/  0.10 &   0.58/  0.09 \\
 3-artificial charact... & \textcolor{blue}{\textbf{  0.34}}/\textcolor{black}{\textbf{  0.01}} &   0.32/  0.02 & \textcolor{blue}{\textbf{  0.34}}/  0.02 & \textcolor{blue}{\textbf{  0.34}}/  0.02 & \textcolor{blue}{\textbf{  0.34}}/\textcolor{black}{\textbf{  0.01}} &   0.33/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.34}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.34}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.34}}/\textcolor{black}{\textbf{  0.01}} &   0.33/  0.02 \\
 4-autoUniv au1 1000 &   0.08/  0.05 & \textcolor{blue}{\textbf{  0.10}}/  0.05 &   0.09/  0.06 &   0.09/  0.05 &   0.09/  0.06 & \textcolor{blue}{\textbf{  0.10}}/\textcolor{black}{\textbf{  0.04}} & \textcolor{red}{\textbf{  0.07}}/\textcolor{black}{\textbf{  0.04}} &   0.08/  0.05 &   0.08/  0.05 &   0.08/  0.05 \\
@@ -76,7 +76,7 @@
 \begin{table}[h]
 \caption{ALCKappa para 5NN: Os maiores valores da média e desvio padrão de cada base está em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados estão sublinhados. Os menores valores de desvio padrão estão em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
- & Rnd & Clu & Unc & Ent & Mar & EERent & EERacu & SGmulti & DWeuc & TUeuc & ATUeuc\\ \hline 33-leukemia haslinger &   0.57/  0.15 &   0.59/\textcolor{black}{\textbf{  0.13}} &   0.58/\textcolor{black}{\textbf{  0.13}} &   0.58/\textcolor{black}{\textbf{  0.13}} &   0.58/\textcolor{black}{\textbf{  0.13}} &   0.54/  0.14 & \textcolor{blue}{\textbf{  0.60}}/  0.14 &   0.57/  0.15 & \textcolor{red}{\textbf{  0.52}}/\textcolor{darkgreen}{\textbf{  0.11}} &   0.57/  0.15 & \textcolor{blue}{\textbf{  0.60}}/  0.15 \\
+ & Rnd & Clu & Unc & Ent & Mar & EERent & EERacu & \textbf{SGmulti} & DWeuc & TUeuc & \textbf{ATUeuc}\\ \hline 33-leukemia haslinger &   0.57/  0.15 &   0.59/\textcolor{black}{\textbf{  0.13}} &   0.58/\textcolor{black}{\textbf{  0.13}} &   0.58/\textcolor{black}{\textbf{  0.13}} &   0.58/\textcolor{black}{\textbf{  0.13}} &   0.54/  0.14 & \textcolor{blue}{\textbf{  0.60}}/  0.14 &   0.57/  0.15 & \textcolor{red}{\textbf{  0.52}}/\textcolor{darkgreen}{\textbf{  0.11}} &   0.57/  0.15 & \textcolor{blue}{\textbf{  0.60}}/  0.15 \\
 34-mammographic mass & \textcolor{black}{\textbf{  0.48}}/\textcolor{black}{\textbf{  0.05}} &   0.44/  0.08 &   0.40/  0.06 &   0.40/  0.06 &   0.40/  0.06 &   0.45/  0.07 & \textcolor{red}{\textbf{  0.39}}/  0.07 & \textcolor{black}{\textbf{  0.48}}/\textcolor{black}{\textbf{  0.05}} &   0.45/  0.07 &   0.40/  0.10 &   0.47/  0.07 \\
 35-mfeat fourier &   0.60/  0.03 &   0.59/\textcolor{black}{\textbf{  0.02}} &   0.59/  0.04 &   0.59/  0.04 &   0.59/  0.04 &   0.63/  0.03 &   0.60/  0.03 &   0.60/  0.03 & \textcolor{red}{\textbf{  0.53}}/\textcolor{black}{\textbf{  0.02}} &   0.62/  0.03 & \textcolor{blue}{\textbf{  0.64}}/\textcolor{black}{\textbf{  0.02}} \\
 36-molecular promotor... &   0.55/  0.12 &   0.54/  0.13 & \textcolor{black}{\textbf{  0.56}}/  0.13 &   0.55/  0.13 & \textcolor{black}{\textbf{  0.56}}/  0.12 &   0.54/\textcolor{black}{\textbf{  0.10}} & \textcolor{black}{\textbf{  0.56}}/  0.13 &   0.55/  0.12 &   0.53/  0.11 & \textcolor{black}{\textbf{  0.56}}/  0.11 &   0.54/  0.13 \\
@@ -113,7 +113,7 @@
 \begin{table}[h]
 \caption{ALCKappa para 5NN: Os maiores valores da média e desvio padrão de cada base está em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados estão sublinhados. Os menores valores de desvio padrão estão em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c}
- & LUeuc & ALUeuc & TUman & ATUman & LUman & ALUman & TUmah & ATUmah & LUmah & ALUmah\\ \hline 33-leukemia haslinger &   0.58/  0.15 &   0.57/  0.20 &   0.55/  0.15 &   0.58/  0.17 &   0.58/  0.16 & \textcolor{blue}{\textbf{  0.60}}/  0.15 &   0.57/  0.14 & \textcolor{blue}{\textbf{  0.60}}/  0.16 &   0.58/  0.15 &   0.56/  0.18 \\
+ & \textbf{LUeuc} & \textbf{ALUeuc} & TUman & \textbf{ATUman} & \textbf{LUman} & \textbf{ALUman} & TUmah & \textbf{ATUmah} & \textbf{LUmah} & \textbf{ALUmah}\\ \hline 33-leukemia haslinger &   0.58/  0.15 &   0.57/  0.20 &   0.55/  0.15 &   0.58/  0.17 &   0.58/  0.16 & \textcolor{blue}{\textbf{  0.60}}/  0.15 &   0.57/  0.14 & \textcolor{blue}{\textbf{  0.60}}/  0.16 &   0.58/  0.15 &   0.56/  0.18 \\
 34-mammographic mass & \textcolor{red}{\textbf{  0.39}}/  0.08 &   0.47/  0.07 &   0.42/  0.07 &   0.46/  0.06 &   0.40/  0.08 &   0.46/  0.07 &   0.42/  0.07 & \textcolor{black}{\textbf{  0.48}}/  0.06 &   0.41/  0.07 & \underline{\textcolor{blue}{\textbf{  0.49}}}/  0.06 \\
 35-mfeat fourier &   0.62/  0.03 &   0.63/\textcolor{black}{\textbf{  0.02}} &   0.63/  0.03 & \textcolor{blue}{\textbf{  0.64}}/\textcolor{black}{\textbf{  0.02}} &   0.62/\textcolor{black}{\textbf{  0.02}} &   0.63/\textcolor{black}{\textbf{  0.02}} &   0.63/\textcolor{black}{\textbf{  0.02}} &   0.63/\textcolor{black}{\textbf{  0.02}} &   0.63/  0.03 &   0.62/\textcolor{black}{\textbf{  0.02}} \\
 36-molecular promotor... &   0.55/  0.12 &   0.54/  0.13 & \underline{\textcolor{blue}{\textbf{  0.57}}}/\textcolor{black}{\textbf{  0.10}} &   0.54/  0.13 &   0.54/  0.12 &   0.54/  0.11 &   0.53/  0.15 &   0.53/  0.11 &   0.53/  0.15 & \textcolor{red}{\textbf{  0.52}}/\textcolor{black}{\textbf{  0.10}} \\
@@ -150,7 +150,7 @@
 \begin{table}[h]
 \caption{ALCKappa para 5NN: Os maiores valores da média e desvio padrão de cada base está em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados estão sublinhados. Os menores valores de desvio padrão estão em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
- & Rnd & Clu & Unc & Ent & Mar & EERent & EERacu & SGmulti & DWeuc & TUeuc & ATUeuc\\ \hline 65-statlog heart &   0.49/\textcolor{black}{\textbf{  0.07}} & \textcolor{blue}{\textbf{  0.52}}/  0.08 &   0.48/  0.08 &   0.48/  0.08 &   0.48/  0.08 & \textcolor{blue}{\textbf{  0.52}}/  0.09 &   0.48/  0.08 &   0.49/\textcolor{black}{\textbf{  0.07}} & \textcolor{red}{\textbf{  0.47}}/  0.10 &   0.49/  0.09 &   0.50/  0.09 \\
+ & Rnd & Clu & Unc & Ent & Mar & EERent & EERacu & \textbf{SGmulti} & DWeuc & TUeuc & \textbf{ATUeuc}\\ \hline 65-statlog heart &   0.49/\textcolor{black}{\textbf{  0.07}} & \textcolor{blue}{\textbf{  0.52}}/  0.08 &   0.48/  0.08 &   0.48/  0.08 &   0.48/  0.08 & \textcolor{blue}{\textbf{  0.52}}/  0.09 &   0.48/  0.08 &   0.49/\textcolor{black}{\textbf{  0.07}} & \textcolor{red}{\textbf{  0.47}}/  0.10 &   0.49/  0.09 &   0.50/  0.09 \\
 66-statlog image segm... &   0.80/  0.02 &   0.82/  0.02 &   0.77/  0.03 &   0.77/  0.03 &   0.77/  0.03 &   0.82/  0.02 & \textcolor{red}{\textbf{  0.75}}/  0.04 &   0.80/  0.02 &   0.76/  0.03 &   0.81/  0.02 & \textcolor{blue}{\textbf{  0.84}}/  0.02 \\
 67-statlog landsat sa... &   0.78/  0.03 &   0.79/\textcolor{black}{\textbf{  0.02}} &   0.75/  0.06 &   0.75/  0.06 &   0.75/  0.06 & \textcolor{blue}{\textbf{  0.80}}/\textcolor{black}{\textbf{  0.02}} &   0.76/  0.04 &   0.78/  0.03 & \textcolor{red}{\textbf{  0.67}}/  0.05 &   0.79/  0.03 & \textcolor{blue}{\textbf{  0.80}}/\textcolor{black}{\textbf{  0.02}} \\
 68-statlog vehicle si... &   0.44/  0.04 &   0.44/  0.04 &   0.46/\textcolor{black}{\textbf{  0.03}} &   0.46/\textcolor{black}{\textbf{  0.03}} &   0.46/\textcolor{black}{\textbf{  0.03}} &   0.45/  0.04 &   0.43/  0.04 &   0.44/  0.04 & \textcolor{red}{\textbf{  0.39}}/  0.04 &   0.47/  0.04 &   0.47/\textcolor{black}{\textbf{  0.03}} \\
@@ -185,7 +185,7 @@
 \begin{table}[h]
 \caption{ALCKappa para 5NN: Os maiores valores da média e desvio padrão de cada base está em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados estão sublinhados. Os menores valores de desvio padrão estão em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c}
- & LUeuc & ALUeuc & TUman & ATUman & LUman & ALUman & TUmah & ATUmah & LUmah & ALUmah\\ \hline 65-statlog heart & \textcolor{red}{\textbf{  0.47}}/  0.08 &   0.51/  0.09 &   0.50/  0.09 &   0.50/  0.09 &   0.49/  0.09 &   0.50/  0.08 &   0.49/  0.10 &   0.49/  0.08 & \textcolor{red}{\textbf{  0.47}}/\textcolor{black}{\textbf{  0.07}} &   0.50/\textcolor{darkgreen}{\textbf{  0.06}} \\
+ & \textbf{LUeuc} & \textbf{ALUeuc} & TUman & \textbf{ATUman} & \textbf{LUman} & \textbf{ALUman} & TUmah & \textbf{ATUmah} & \textbf{LUmah} & \textbf{ALUmah}\\ \hline 65-statlog heart & \textcolor{red}{\textbf{  0.47}}/  0.08 &   0.51/  0.09 &   0.50/  0.09 &   0.50/  0.09 &   0.49/  0.09 &   0.50/  0.08 &   0.49/  0.10 &   0.49/  0.08 & \textcolor{red}{\textbf{  0.47}}/\textcolor{black}{\textbf{  0.07}} &   0.50/\textcolor{darkgreen}{\textbf{  0.06}} \\
 66-statlog image segm... &   0.81/  0.02 &   0.83/\textcolor{black}{\textbf{  0.01}} &   0.82/  0.02 & \textcolor{blue}{\textbf{  0.84}}/\textcolor{black}{\textbf{  0.01}} &   0.82/  0.02 &   0.83/\textcolor{black}{\textbf{  0.01}} &   0.83/  0.02 & \textcolor{blue}{\textbf{  0.84}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.84}}/\textcolor{black}{\textbf{  0.01}} &   0.83/\textcolor{black}{\textbf{  0.01}} \\
 67-statlog landsat sa... &   0.79/  0.03 & \textcolor{blue}{\textbf{  0.80}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.80}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.80}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.80}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.80}}/\textcolor{black}{\textbf{  0.02}} &   0.78/  0.03 &   0.78/\textcolor{black}{\textbf{  0.02}} &   0.78/  0.03 &   0.78/\textcolor{black}{\textbf{  0.02}} \\
 68-statlog vehicle si... &   0.46/  0.04 &   0.47/\textcolor{black}{\textbf{  0.03}} &   0.47/  0.04 & \textcolor{blue}{\textbf{  0.48}}/  0.04 &   0.47/\textcolor{black}{\textbf{  0.03}} &   0.47/\textcolor{black}{\textbf{  0.03}} &   0.46/  0.04 & \textcolor{blue}{\textbf{  0.48}}/\textcolor{black}{\textbf{  0.03}} &   0.46/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.48}}/  0.04 \\
