--- a/stratsALCKappaFriedC4.5Redux.tex
+++ b/stratsALCKappaFriedC4.5Redux.tex
@@ -1,20 +1,18 @@
 \begin{table}[h]
 \caption{Um contra um (C4.5). Medida: ALCKappa. \textit{Legenda na Tabela \ref{tab:friedClassif}.}}
-\begin{center}\scalebox{0.9}{\begin{tabular}{lcc|cc|cc|cc|cc|cc|c}
- 			& 1 & 2 & 3 & 4 & 5 & 6 & 7 & 8 & 9 & 10 & 11 & 12 & 13\\
-1 - Rnd  	& - &   &   &   &   &   & + &   &   &   &   &   &   \\
-2 - Clu  	&   & - &   &   &   &   & * &   &   &   &   &   &   \\ \hline
-3 - Mar  	&   &   & - &   &   &   & . &   &   &   &   &   &   \\
-4 - EERent	&   &   &   & - &   &   & * &   &   &   &   &   &   \\ \hline
-5 - EERacu	&   &   &   &   & - &   & * &   &   &   &   &   &   \\
-6 - \textbf{SGmulti}	& + &   & + &   &   & - & * &   &   &   &   &   &   \\ \hline
-7 - DWeuc	&   &   &   &   &   &   & - &   &   &   &   &   &   \\
-8 - TUman	& * & * & * & * & * & . & * & - &   &   &   &   &   \\ \hline
-9 - \textbf{ATUman}	& * & * & * & * & * & * & * &   & - &   & + &   &   \\
-10 - \textbf{ALUman}	& * & * & * & * & * & * & * &   &   & - & * & + & + \\ \hline
-11 - TUmah	& * &   & * &   &   &   & * &   &   &   & - &   &   \\
-12 - \textbf{ATUmah}	& * & * & * & + & * &   & * &   &   &   &   & - &   \\ \hline
-13 - \textbf{ALUmah}	& * & * & * & + & * &   & * &   &   &   &   &   & - \\\end{tabular}}
+\begin{center}\scalebox{0.9}{\begin{tabular}{lcc|cc|cc|cc|cc|c}
+ 			& 1 & 2 & 3 & 4 & 5 & 6 & 7 & 8 & 9 & 10 & 11\\
+1 - Rnd  	& - &   &   &   &   &   & * &   &   &   &   \\
+2 - Clu  	&   & - &   &   &   &   & * &   &   &   &   \\ \hline
+3 - Mar  	&   &   & - &   &   &   & + &   &   &   &   \\
+4 - EERent	&   &   & . & - &   &   & * &   &   &   &   \\ \hline
+5 - EERacu	&   &   &   &   & - &   & * &   &   &   &   \\
+6 - \textbf{SGmulti}	& + &   & * &   &   & - & * &   &   &   &   \\ \hline
+7 - DWeuc	&   &   &   &   &   &   & - &   &   &   &   \\
+8 - TUman	& * & * & * & * & * & . & * & - &   &   &   \\ \hline
+9 - \textbf{ATUman}	& * & * & * & * & * & * & * &   & - & + &   \\
+10 - TUmah	& * &   & * &   &   &   & * &   &   & - &   \\ \hline
+11 - \textbf{ATUmah}	& * & * & * & + & * &   & * &   &   &   & - \\\end{tabular}}
 \label{stratsALCKappaFriedC4.5Redux}
 \end{center}
 \end{table}
