--- a/stratsALCKappaFriedIELM.tex
+++ b/stratsALCKappaFriedIELM.tex
@@ -9,20 +9,20 @@
 5 - Mar  	& * & * & . & * & - & * & * & * & * &   & + &   & + &   &   &   &   &   & * &   & * \\
 6 - EERent	&   &   &   &   &   & - &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   \\ \hline
 7 - EERacu	& + &   &   &   &   &   & - & + &   &   &   &   &   &   &   &   &   &   &   &   &   \\
-8 - SGmulti	&   &   &   &   &   &   &   & - &   &   &   &   &   &   &   &   &   &   &   &   &   \\ \hline
+8 - \textbf{SGmulti}	&   &   &   &   &   &   &   & - &   &   &   &   &   &   &   &   &   &   &   &   &   \\ \hline
 9 - DWeuc	&   &   &   &   &   &   &   &   & - &   &   &   &   &   &   &   &   &   &   &   &   \\
 10 - TUeuc	& * & * & * & * &   & * & * & * & * & - & * &   & * &   & * &   & * &   & * &   & * \\ \hline
-11 - ATUeuc	& * & * &   &   &   &   &   & * &   &   & - &   &   &   &   &   &   &   &   &   &   \\
-12 - LUeuc	& * & * & * & * &   & * & * & * & * &   & * & - & * &   & * &   & * &   & * &   & * \\ \hline
-13 - ALUeuc	& * & * &   &   &   &   &   & * &   &   &   &   & - &   &   &   &   &   &   &   &   \\
+11 - \textbf{ATUeuc}	& * & * &   &   &   &   &   & * &   &   & - &   &   &   &   &   &   &   &   &   &   \\
+12 - \textbf{LUeuc}	& * & * & * & * &   & * & * & * & * &   & * & - & * &   & * &   & * &   & * &   & * \\ \hline
+13 - \textbf{ALUeuc}	& * & * &   &   &   &   &   & * &   &   &   &   & - &   &   &   &   &   &   &   &   \\
 14 - TUman	& * & * & * & * &   & * & * & * & * &   & * &   & * & - & * &   & * &   & * &   & * \\ \hline
-15 - ATUman	& * & * &   &   &   & . &   & * & + &   &   &   &   &   & - &   &   &   &   &   &   \\
-16 - LUman	& * & * & * & * &   & * & * & * & * &   & * &   & * &   & * & - & * &   & * &   & * \\ \hline
-17 - ALUman	& * & * &   &   &   &   &   & * & . &   &   &   &   &   &   &   & - &   &   &   &   \\
+15 - \textbf{ATUman}	& * & * &   &   &   & . &   & * & + &   &   &   &   &   & - &   &   &   &   &   &   \\
+16 - \textbf{LUman}	& * & * & * & * &   & * & * & * & * &   & * &   & * &   & * & - & * &   & * &   & * \\ \hline
+17 - \textbf{ALUman}	& * & * &   &   &   &   &   & * & . &   &   &   &   &   &   &   & - &   &   &   &   \\
 18 - TUmah	& * & * & * & * &   & * & * & * & * &   & * &   & * &   & * &   & * & - & * &   & * \\ \hline
-19 - ATUmah	& * &   &   &   &   &   &   & + &   &   &   &   &   &   &   &   &   &   & - &   &   \\
-20 - LUmah	& * & * & * & * &   & * & * & * & * &   & * &   & * &   & * &   & * &   & * & - & * \\ \hline
-21 - ALUmah	& * & + &   &   &   &   &   & * &   &   &   &   &   &   &   &   &   &   &   &   & - \\\end{tabular}
+19 - \textbf{ATUmah}	& * &   &   &   &   &   &   & + &   &   &   &   &   &   &   &   &   &   & - &   &   \\
+20 - \textbf{LUmah}	& * & * & * & * &   & * & * & * & * &   & * &   & * &   & * &   & * &   & * & - & * \\ \hline
+21 - \textbf{ALUmah}	& * & + &   &   &   &   &   & * &   &   &   &   &   &   &   &   &   &   &   &   & - \\\end{tabular}
 \label{stratsALCKappaFriedIELM}
 \end{center}
 \end{table}
