--- a/stratsALCKappaFriedRF.tex
+++ b/stratsALCKappaFriedRF.tex
@@ -1,5 +1,5 @@
 \begin{table}[h]
-\caption{Um contra um (NB). Medida: ALCKappa. \textit{Legenda na Tabela \ref{tab:friedClassif}.}}
+\caption{Um contra um (RF). Medida: ALCKappa. \textit{Legenda na Tabela \ref{tab:friedClassif}.}}
 \begin{center}\begin{tabular}{lcc|cc|cc|cc|cc|cc|cc|cc|cc|cc|c}
  			& 1 & 2 & 3 & 4 & 5 & 6 & 7 & 8 & 9 & 10 & 11 & 12 & 13 & 14 & 15 & 16 & 17 & 18 & 19 & 20 & 21\\
 1 - Rnd  	& - &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   \\
@@ -9,20 +9,20 @@
 5 - Mar  	&   &   &   &   & - &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   \\
 6 - EERent	&   &   &   &   &   & - &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   \\ \hline
 7 - EERacu	&   &   &   &   &   &   & - &   &   &   &   &   &   &   &   &   &   &   &   &   &   \\
-8 - \textbf{SGmulti}	& * & * & * & * & * & * & * & - & * &   &   & . &   &   &   &   &   & * & + & * & * \\ \hline
+8 - \textbf{SGmulti}	&   &   &   &   &   &   &   & - &   &   &   &   &   &   &   &   &   &   &   &   &   \\ \hline
 9 - DWeuc	&   &   &   &   &   &   &   &   & - &   &   &   &   &   &   &   &   &   &   &   &   \\
-10 - TUeuc	&   &   &   & . &   &   &   &   &   & - &   &   &   &   &   &   &   & + &   & . &   \\ \hline
-11 - \textbf{ATUeuc}	& * & * & * & * & + & * & * &   & * &   & - &   &   &   &   &   &   & * & . & * & + \\
-12 - \textbf{LUeuc}	&   &   &   &   &   &   &   &   &   &   &   & - &   &   &   &   &   & + &   &   &   \\ \hline
-13 - \textbf{ALUeuc}	& * & + & * & * & + & * & * &   & * &   &   &   & - &   &   &   &   & * &   & * & + \\
-14 - TUman	&   &   &   & + &   & + &   &   &   &   &   &   &   & - &   &   &   & * &   & + &   \\ \hline
-15 - \textbf{ATUman}	& * & * & * & * & * & * & * &   & * &   &   & . &   &   & - &   &   & * & + & * & * \\
-16 - \textbf{LUman}	& + &   &   & * &   & * &   &   & + &   &   &   &   &   &   & - &   & * &   & * &   \\ \hline
-17 - \textbf{ALUman}	& * & * & * & * & + & * & * &   & * &   &   &   &   &   &   &   & - & * & . & * & + \\
+10 - TUeuc	&   &   &   &   &   &   &   &   &   & - &   &   &   &   &   &   &   &   &   &   &   \\ \hline
+11 - \textbf{ATUeuc}	&   &   &   &   &   &   &   &   &   &   & - &   &   &   &   &   &   &   &   &   &   \\
+12 - \textbf{LUeuc}	&   &   &   &   &   &   &   &   &   &   &   & - &   &   &   &   &   &   &   &   &   \\ \hline
+13 - \textbf{ALUeuc}	&   &   &   &   &   &   &   &   &   &   &   &   & - &   &   &   &   &   &   &   &   \\
+14 - TUman	&   &   &   &   &   &   &   &   &   &   &   &   &   & - &   &   &   &   &   &   &   \\ \hline
+15 - \textbf{ATUman}	&   &   &   &   &   &   &   &   &   &   &   &   &   &   & - &   &   &   &   &   &   \\
+16 - \textbf{LUman}	&   &   &   &   &   &   &   &   &   &   &   &   &   &   &   & - &   &   &   &   &   \\ \hline
+17 - \textbf{ALUman}	&   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   & - &   &   &   &   \\
 18 - TUmah	&   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   & - &   &   &   \\ \hline
 19 - \textbf{ATUmah}	&   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   & - &   &   \\
 20 - \textbf{LUmah}	&   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   & - &   \\ \hline
 21 - \textbf{ALUmah}	&   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   & - \\\end{tabular}
-\label{stratsALCKappaFriedNB}
+\label{stratsALCKappaFriedRF}
 \end{center}
 \end{table}
