--- a/stratsALCKappaIELM.tex
+++ b/stratsALCKappaIELM.tex
@@ -2,7 +2,7 @@
 \begin{table}[h]
 \caption{ALCKappa para IELM: Os maiores valores da média e desvio padrão de cada base está em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados estão sublinhados. Os menores valores de desvio padrão estão em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
- & Rnd & Clu & Unc & Ent & Mar & EERent & EERacu & SGmulti & DWeuc & TUeuc & ATUeuc\\ \hline 1-abalone 3class &   0.32/\textcolor{black}{\textbf{  0.06}} &   0.32/\textcolor{black}{\textbf{  0.06}} & \textcolor{red}{\textbf{  0.28}}/  0.10 & \textcolor{red}{\textbf{  0.28}}/  0.10 &   0.31/  0.10 &   0.33/  0.07 &   0.32/\textcolor{black}{\textbf{  0.06}} &   0.32/\textcolor{black}{\textbf{  0.06}} & \textcolor{red}{\textbf{  0.28}}/  0.08 & \textcolor{blue}{\textbf{  0.34}}/  0.08 &   0.32/\textcolor{black}{\textbf{  0.06}} \\
+ & Rnd & Clu & Unc & Ent & Mar & EERent & EERacu & \textbf{SGmulti} & DWeuc & TUeuc & \textbf{ATUeuc}\\ \hline 1-abalone 3class &   0.32/\textcolor{black}{\textbf{  0.06}} &   0.32/\textcolor{black}{\textbf{  0.06}} & \textcolor{red}{\textbf{  0.28}}/  0.10 & \textcolor{red}{\textbf{  0.28}}/  0.10 &   0.31/  0.10 &   0.33/  0.07 &   0.32/\textcolor{black}{\textbf{  0.06}} &   0.32/\textcolor{black}{\textbf{  0.06}} & \textcolor{red}{\textbf{  0.28}}/  0.08 & \textcolor{blue}{\textbf{  0.34}}/  0.08 &   0.32/\textcolor{black}{\textbf{  0.06}} \\
 2-arcene & \textcolor{blue}{\textbf{  0.24}}/\textcolor{black}{\textbf{  0.13}} &   0.19/\textcolor{black}{\textbf{  0.13}} &   0.19/  0.15 &   0.21/  0.16 &   0.20/  0.16 &   0.16/\textcolor{black}{\textbf{  0.13}} &   0.19/  0.17 & \textcolor{blue}{\textbf{  0.24}}/\textcolor{black}{\textbf{  0.13}} &   0.16/  0.15 &   0.19/\textcolor{black}{\textbf{  0.13}} &   0.22/  0.16 \\
 3-artificial charact... &   0.15/\textcolor{black}{\textbf{  0.02}} &   0.15/\textcolor{black}{\textbf{  0.02}} &   0.13/\textcolor{black}{\textbf{  0.02}} &   0.11/  0.03 &   0.17/  0.03 &   0.15/\textcolor{black}{\textbf{  0.02}} &   0.16/  0.03 &   0.15/  0.03 & \textcolor{red}{\textbf{  0.07}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.18}}/  0.03 &   0.17/\textcolor{black}{\textbf{  0.02}} \\
 4-autoUniv au1 1000 &   0.04/\textcolor{black}{\textbf{  0.06}} &   0.07/  0.08 &   0.06/  0.08 &   0.06/  0.08 &   0.06/  0.08 &   0.04/  0.07 &   0.05/  0.09 & \textcolor{red}{\textbf{  0.03}}/  0.08 & \textcolor{black}{\textbf{  0.08}}/  0.08 &   0.06/  0.07 &   0.06/  0.08 \\
@@ -39,7 +39,7 @@
 \begin{table}[h]
 \caption{ALCKappa para IELM: Os maiores valores da média e desvio padrão de cada base está em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados estão sublinhados. Os menores valores de desvio padrão estão em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c}
- & LUeuc & ALUeuc & TUman & ATUman & LUman & ALUman & TUmah & ATUmah & LUmah & ALUmah\\ \hline 1-abalone 3class & \textcolor{blue}{\textbf{  0.34}}/\textcolor{black}{\textbf{  0.06}} &   0.32/\textcolor{black}{\textbf{  0.06}} &   0.33/\textcolor{black}{\textbf{  0.06}} &   0.33/\textcolor{black}{\textbf{  0.06}} & \textcolor{blue}{\textbf{  0.34}}/\textcolor{black}{\textbf{  0.06}} &   0.32/  0.08 &   0.33/  0.07 &   0.32/  0.07 & \textcolor{blue}{\textbf{  0.34}}/\textcolor{black}{\textbf{  0.06}} &   0.32/\textcolor{black}{\textbf{  0.06}} \\
+ & \textbf{LUeuc} & \textbf{ALUeuc} & TUman & \textbf{ATUman} & \textbf{LUman} & \textbf{ALUman} & TUmah & \textbf{ATUmah} & \textbf{LUmah} & \textbf{ALUmah}\\ \hline 1-abalone 3class & \textcolor{blue}{\textbf{  0.34}}/\textcolor{black}{\textbf{  0.06}} &   0.32/\textcolor{black}{\textbf{  0.06}} &   0.33/\textcolor{black}{\textbf{  0.06}} &   0.33/\textcolor{black}{\textbf{  0.06}} & \textcolor{blue}{\textbf{  0.34}}/\textcolor{black}{\textbf{  0.06}} &   0.32/  0.08 &   0.33/  0.07 &   0.32/  0.07 & \textcolor{blue}{\textbf{  0.34}}/\textcolor{black}{\textbf{  0.06}} &   0.32/\textcolor{black}{\textbf{  0.06}} \\
 2-arcene &   0.19/  0.17 &   0.23/  0.17 &   0.18/  0.15 &   0.20/  0.16 &   0.20/  0.17 &   0.21/  0.18 &   0.18/  0.19 & \textcolor{red}{\textbf{  0.12}}/  0.16 &   0.19/  0.16 &   0.14/  0.16 \\
 3-artificial charact... &   0.17/  0.03 &   0.16/  0.03 & \textcolor{blue}{\textbf{  0.18}}/\textcolor{black}{\textbf{  0.02}} &   0.17/\textcolor{black}{\textbf{  0.02}} &   0.17/\textcolor{black}{\textbf{  0.02}} &   0.16/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.18}}/\textcolor{black}{\textbf{  0.02}} &   0.17/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.18}}/  0.03 &   0.16/\textcolor{black}{\textbf{  0.02}} \\
 4-autoUniv au1 1000 &   0.06/\textcolor{black}{\textbf{  0.06}} &   0.06/\textcolor{black}{\textbf{  0.06}} &   0.07/\textcolor{black}{\textbf{  0.06}} & \underline{\textcolor{blue}{\textbf{  0.09}}}/  0.07 &   0.07/\textcolor{black}{\textbf{  0.06}} &   0.07/\textcolor{black}{\textbf{  0.06}} & \textcolor{black}{\textbf{  0.08}}/  0.07 &   0.06/  0.08 & \textcolor{black}{\textbf{  0.08}}/  0.07 &   0.07/  0.07 \\
@@ -76,7 +76,7 @@
 \begin{table}[h]
 \caption{ALCKappa para IELM: Os maiores valores da média e desvio padrão de cada base está em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados estão sublinhados. Os menores valores de desvio padrão estão em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
- & Rnd & Clu & Unc & Ent & Mar & EERent & EERacu & SGmulti & DWeuc & TUeuc & ATUeuc\\ \hline 33-leukemia haslinger &   0.42/  0.21 &   0.45/\textcolor{black}{\textbf{  0.18}} &   0.42/  0.22 &   0.42/  0.22 &   0.42/  0.22 &   0.43/  0.20 &   0.44/  0.20 &   0.45/  0.19 & \textcolor{blue}{\textbf{  0.47}}/  0.23 & \textcolor{blue}{\textbf{  0.47}}/  0.22 &   0.44/  0.20 \\
+ & Rnd & Clu & Unc & Ent & Mar & EERent & EERacu & \textbf{SGmulti} & DWeuc & TUeuc & \textbf{ATUeuc}\\ \hline 33-leukemia haslinger &   0.42/  0.21 &   0.45/\textcolor{black}{\textbf{  0.18}} &   0.42/  0.22 &   0.42/  0.22 &   0.42/  0.22 &   0.43/  0.20 &   0.44/  0.20 &   0.45/  0.19 & \textcolor{blue}{\textbf{  0.47}}/  0.23 & \textcolor{blue}{\textbf{  0.47}}/  0.22 &   0.44/  0.20 \\
 34-mammographic mass & \textcolor{red}{\textbf{  0.48}}/  0.13 & \textcolor{red}{\textbf{  0.48}}/  0.12 &   0.55/\textcolor{black}{\textbf{  0.07}} &   0.55/\textcolor{black}{\textbf{  0.07}} &   0.55/\textcolor{black}{\textbf{  0.07}} &   0.50/  0.13 &   0.52/  0.09 & \textcolor{red}{\textbf{  0.48}}/  0.13 &   0.54/  0.09 &   0.55/\textcolor{black}{\textbf{  0.07}} &   0.53/  0.10 \\
 35-mfeat fourier &   0.38/  0.04 &   0.37/  0.03 &   0.37/  0.03 &   0.36/  0.03 &   0.39/  0.04 &   0.39/  0.04 &   0.39/  0.04 &   0.39/  0.03 & \textcolor{red}{\textbf{  0.29}}/  0.04 & \textcolor{blue}{\textbf{  0.43}}/  0.03 & \textcolor{blue}{\textbf{  0.43}}/  0.03 \\
 36-molecular promotor... &   0.14/  0.20 &   0.10/\textcolor{black}{\textbf{  0.16}} & \textcolor{blue}{\textbf{  0.18}}/  0.21 & \textcolor{blue}{\textbf{  0.18}}/  0.21 & \textcolor{blue}{\textbf{  0.18}}/  0.21 &   0.12/  0.17 &   0.15/  0.20 &   0.15/  0.18 &   0.14/  0.23 &   0.06/  0.25 &   0.11/  0.21 \\
@@ -113,7 +113,7 @@
 \begin{table}[h]
 \caption{ALCKappa para IELM: Os maiores valores da média e desvio padrão de cada base está em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados estão sublinhados. Os menores valores de desvio padrão estão em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c}
- & LUeuc & ALUeuc & TUman & ATUman & LUman & ALUman & TUmah & ATUmah & LUmah & ALUmah\\ \hline 33-leukemia haslinger &   0.44/  0.19 &   0.44/  0.21 &   0.42/  0.21 & \textcolor{red}{\textbf{  0.41}}/  0.23 &   0.43/\textcolor{black}{\textbf{  0.18}} &   0.44/  0.22 & \textcolor{red}{\textbf{  0.41}}/  0.20 &   0.42/  0.22 &   0.45/  0.19 & \textcolor{red}{\textbf{  0.41}}/  0.22 \\
+ & \textbf{LUeuc} & \textbf{ALUeuc} & TUman & \textbf{ATUman} & \textbf{LUman} & \textbf{ALUman} & TUmah & \textbf{ATUmah} & \textbf{LUmah} & \textbf{ALUmah}\\ \hline 33-leukemia haslinger &   0.44/  0.19 &   0.44/  0.21 &   0.42/  0.21 & \textcolor{red}{\textbf{  0.41}}/  0.23 &   0.43/\textcolor{black}{\textbf{  0.18}} &   0.44/  0.22 & \textcolor{red}{\textbf{  0.41}}/  0.20 &   0.42/  0.22 &   0.45/  0.19 & \textcolor{red}{\textbf{  0.41}}/  0.22 \\
 34-mammographic mass & \textcolor{blue}{\textbf{  0.56}}/\textcolor{black}{\textbf{  0.07}} &   0.52/  0.12 &   0.54/  0.09 &   0.52/  0.09 & \textcolor{blue}{\textbf{  0.56}}/\textcolor{darkgreen}{\textbf{  0.06}} &   0.53/  0.09 &   0.55/  0.08 &   0.50/  0.10 & \textcolor{blue}{\textbf{  0.56}}/\textcolor{black}{\textbf{  0.07}} &   0.52/  0.09 \\
 35-mfeat fourier &   0.42/  0.03 & \textcolor{blue}{\textbf{  0.43}}/  0.03 & \textcolor{blue}{\textbf{  0.43}}/  0.03 & \textcolor{blue}{\textbf{  0.43}}/  0.04 & \textcolor{blue}{\textbf{  0.43}}/  0.03 &   0.42/  0.03 &   0.42/\textcolor{black}{\textbf{  0.02}} &   0.42/\textcolor{black}{\textbf{  0.02}} &   0.41/  0.03 &   0.41/  0.03 \\
 36-molecular promotor... &   0.10/  0.23 &   0.09/  0.24 &   0.08/  0.21 &   0.12/  0.18 & \textcolor{red}{\textbf{  0.03}}/  0.21 &   0.10/  0.19 & \textcolor{blue}{\textbf{  0.18}}/  0.21 &   0.11/  0.17 & \textcolor{blue}{\textbf{  0.18}}/  0.21 &   0.11/\textcolor{black}{\textbf{  0.16}} \\
@@ -150,7 +150,7 @@
 \begin{table}[h]
 \caption{ALCKappa para IELM: Os maiores valores da média e desvio padrão de cada base está em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados estão sublinhados. Os menores valores de desvio padrão estão em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
- & Rnd & Clu & Unc & Ent & Mar & EERent & EERacu & SGmulti & DWeuc & TUeuc & ATUeuc\\ \hline 65-statlog heart &   0.46/  0.15 &   0.45/\textcolor{black}{\textbf{  0.14}} &   0.52/\textcolor{black}{\textbf{  0.14}} &   0.52/\textcolor{black}{\textbf{  0.14}} &   0.52/\textcolor{black}{\textbf{  0.14}} &   0.50/  0.17 &   0.49/  0.16 & \textcolor{red}{\textbf{  0.43}}/  0.16 &   0.51/  0.16 &   0.52/  0.15 &   0.50/\textcolor{black}{\textbf{  0.14}} \\
+ & Rnd & Clu & Unc & Ent & Mar & EERent & EERacu & \textbf{SGmulti} & DWeuc & TUeuc & \textbf{ATUeuc}\\ \hline 65-statlog heart &   0.46/  0.15 &   0.45/\textcolor{black}{\textbf{  0.14}} &   0.52/\textcolor{black}{\textbf{  0.14}} &   0.52/\textcolor{black}{\textbf{  0.14}} &   0.52/\textcolor{black}{\textbf{  0.14}} &   0.50/  0.17 &   0.49/  0.16 & \textcolor{red}{\textbf{  0.43}}/  0.16 &   0.51/  0.16 &   0.52/  0.15 &   0.50/\textcolor{black}{\textbf{  0.14}} \\
 66-statlog image segm... &   0.66/  0.05 &   0.68/  0.04 &   0.60/  0.08 &   0.58/  0.08 &   0.75/\textcolor{black}{\textbf{  0.03}} &   0.67/  0.05 &   0.71/  0.04 &   0.66/  0.04 & \textcolor{red}{\textbf{  0.50}}/  0.06 &   0.75/\textcolor{black}{\textbf{  0.03}} &   0.69/  0.04 \\
 67-statlog landsat sa... &   0.66/  0.04 &   0.69/\textcolor{black}{\textbf{  0.03}} &   0.65/  0.09 &   0.62/  0.08 &   0.72/  0.05 &   0.66/  0.06 &   0.71/  0.04 &   0.67/  0.05 & \textcolor{red}{\textbf{  0.47}}/  0.06 &   0.71/  0.04 &   0.68/  0.04 \\
 68-statlog vehicle si... &   0.37/  0.07 &   0.37/  0.07 &   0.42/\textcolor{darkgreen}{\textbf{  0.05}} &   0.41/\textcolor{black}{\textbf{  0.06}} &   0.43/\textcolor{black}{\textbf{  0.06}} & \textcolor{red}{\textbf{  0.36}}/  0.09 &   0.41/  0.07 &   0.38/\textcolor{black}{\textbf{  0.06}} &   0.42/\textcolor{black}{\textbf{  0.06}} & \underline{\textcolor{blue}{\textbf{  0.45}}}/\textcolor{black}{\textbf{  0.06}} &   0.39/\textcolor{black}{\textbf{  0.06}} \\
@@ -185,7 +185,7 @@
 \begin{table}[h]
 \caption{ALCKappa para IELM: Os maiores valores da média e desvio padrão de cada base está em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados estão sublinhados. Os menores valores de desvio padrão estão em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c}
- & LUeuc & ALUeuc & TUman & ATUman & LUman & ALUman & TUmah & ATUmah & LUmah & ALUmah\\ \hline 65-statlog heart &   0.51/  0.16 &   0.49/  0.16 & \underline{\textcolor{blue}{\textbf{  0.54}}}/  0.16 &   0.50/\textcolor{darkgreen}{\textbf{  0.12}} &   0.50/  0.15 &   0.51/\textcolor{black}{\textbf{  0.14}} & \textcolor{black}{\textbf{  0.53}}/\textcolor{black}{\textbf{  0.14}} &   0.49/  0.17 &   0.51/  0.16 &   0.47/  0.18 \\
+ & \textbf{LUeuc} & \textbf{ALUeuc} & TUman & \textbf{ATUman} & \textbf{LUman} & \textbf{ALUman} & TUmah & \textbf{ATUmah} & \textbf{LUmah} & \textbf{ALUmah}\\ \hline 65-statlog heart &   0.51/  0.16 &   0.49/  0.16 & \underline{\textcolor{blue}{\textbf{  0.54}}}/  0.16 &   0.50/\textcolor{darkgreen}{\textbf{  0.12}} &   0.50/  0.15 &   0.51/\textcolor{black}{\textbf{  0.14}} & \textcolor{black}{\textbf{  0.53}}/\textcolor{black}{\textbf{  0.14}} &   0.49/  0.17 &   0.51/  0.16 &   0.47/  0.18 \\
 66-statlog image segm... &   0.74/  0.04 &   0.69/  0.04 &   0.74/  0.04 &   0.69/\textcolor{black}{\textbf{  0.03}} &   0.73/  0.04 &   0.69/  0.04 & \textcolor{blue}{\textbf{  0.76}}/\textcolor{black}{\textbf{  0.03}} &   0.70/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.76}}/  0.04 &   0.69/  0.04 \\
 67-statlog landsat sa... &   0.71/  0.04 &   0.69/\textcolor{black}{\textbf{  0.03}} &   0.70/  0.04 &   0.68/\textcolor{black}{\textbf{  0.03}} &   0.70/  0.04 &   0.69/  0.04 & \textcolor{blue}{\textbf{  0.73}}/  0.04 &   0.67/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.73}}/  0.04 &   0.67/\textcolor{black}{\textbf{  0.03}} \\
 68-statlog vehicle si... & \textcolor{black}{\textbf{  0.44}}/  0.07 &   0.39/\textcolor{black}{\textbf{  0.06}} & \textcolor{black}{\textbf{  0.44}}/  0.07 &   0.40/  0.08 & \textcolor{black}{\textbf{  0.44}}/\textcolor{black}{\textbf{  0.06}} &   0.40/  0.07 & \textcolor{black}{\textbf{  0.44}}/  0.07 &   0.41/  0.08 &   0.43/  0.07 &   0.41/  0.07 \\
