--- a/passiveDists.tex
+++ b/passiveDists.tex
@@ -1,12 +1,13 @@
 \begin{table}[h]
-\caption{Similaridade entre algoritmos de aprendizado de acordo com a acurácia balanceada para as 94 bases de dados. O maior e o menor valor de cada linha está em \textcolor{blue}{\textbf{azul}} e \textcolor{red}{\textbf{vermelho}} respectivamente.}
-\begin{center}\begin{tabular}{lcc|cc|cc|c}
- 				& 5NN & C4.5 & CIELM & IELM & NB & VFDT & SVM \\5NN	& - & \textcolor{blue}{\textbf{  0.52}} &   0.38 &   0.40 &   0.46 &   0.44 & \textcolor{red}{\textbf{  0.28}} \\
-C4.5	& \textcolor{blue}{\textbf{  0.52}} & - &   0.38 &   0.40 &   0.46 &   0.43 & \textcolor{red}{\textbf{  0.28}} \\ \hline
-CIELM	&   0.38 &   0.38 & - & \textcolor{blue}{\textbf{  0.77}} &   0.43 &   0.42 & \textcolor{red}{\textbf{  0.29}} \\
-IELM	&   0.40 &   0.40 & \textcolor{blue}{\textbf{  0.77}} & - &   0.44 &   0.43 & \textcolor{red}{\textbf{  0.30}} \\ \hline
-NB	&   0.46 &   0.46 &   0.43 &   0.44 & - & \textcolor{blue}{\textbf{  0.56}} & \textcolor{red}{\textbf{  0.28}} \\
-VFDT	&   0.44 &   0.43 &   0.42 &   0.43 & \textcolor{blue}{\textbf{  0.56}} & - & \textcolor{red}{\textbf{  0.28}} \\ \hline
-SVM	& \textcolor{red}{\textbf{  0.28}} & \textcolor{red}{\textbf{  0.28}} &   0.29 & \textcolor{blue}{\textbf{  0.30}} & \textcolor{red}{\textbf{  0.28}} & \textcolor{red}{\textbf{  0.28}} & - \\\end{tabular}\label{passiveDists}
+\caption{Similaridade entre algoritmos de aprendizado de acordo com a acurácia balanceada para as 94 bases de dados. O maior e o menor valor de cada linha está em \textcolor{blue}{\textbf{azul}} e \textcolor{red}{\textbf{vermelho}} respectivamente. Valores iguais ou acima de $0,50$ estão em negrito.}
+\begin{center}\begin{tabular}{lcc|cc|cc|cc}
+ 				& 5NN & C4.5 & CIELM & IELM & NB & RF & VFDT & SVM \\5NN	& - & \textbf{  0.52} &   0.38 &   0.40 &   0.46 & \textcolor{blue}{\textbf{  0.53}} &   0.44 & \textcolor{red}{\textbf{  0.28}} \\
+C4.5	& \textbf{  0.52} & - &   0.38 &   0.40 &   0.46 & \textcolor{blue}{\textbf{  0.59}} &   0.43 & \textcolor{red}{\textbf{  0.28}} \\ \hline
+CIELM	&   0.38 &   0.38 & - & \textcolor{blue}{\textbf{  0.77}} &   0.43 &   0.34 &   0.42 & \textcolor{red}{\textbf{  0.29}} \\
+IELM	&   0.40 &   0.40 & \textcolor{blue}{\textbf{  0.77}} & - &   0.44 &   0.35 &   0.43 & \textcolor{red}{\textbf{  0.30}} \\ \hline
+NB	&   0.46 &   0.46 &   0.43 &   0.44 & - &   0.42 & \textcolor{blue}{\textbf{  0.56}} & \textcolor{red}{\textbf{  0.28}} \\
+RF	& \textbf{  0.53} & \textcolor{blue}{\textbf{  0.59}} &   0.34 &   0.35 &   0.42 & - &   0.40 & \textcolor{red}{\textbf{  0.26}} \\ \hline
+VFDT	&   0.44 &   0.43 &   0.42 &   0.43 & \textcolor{blue}{\textbf{  0.56}} &   0.40 & - & \textcolor{red}{\textbf{  0.28}} \\
+SVM	&   0.28 &   0.28 &   0.29 & \textcolor{blue}{\textbf{  0.30}} &   0.28 & \textcolor{red}{\textbf{  0.26}} &   0.28 & - \\ \hline\end{tabular}\label{passiveDists}
 \end{center}
 \end{table}
