--- a/plot.tex
+++ b/plot.tex
@@ -1,49 +1,73 @@
-% \begin{figure}
-% \caption{Curva de aprendizado média de todas as bases com mais de 200 exemplos (melhor aprendiz).}
-% \begin{center}
-% \begin{tikzpicture}[scale=1]
-% \begin{axis}[xlabel=consultas, ylabel=acurácia balanceada, legend style={at={(0.9,0.1)}, anchor=south east}, grid = both,
-% scale only axis, width=300]
-% \addplot+[green!20!black, thick,   mark=*, mark repeat=200, mark phase=10] table[x=budget, y=Rnd] {kappabest.plot};\addlegendentry{Rnd}
-% % \addplot+[violet, mark=pentagon, mark repeat=200, mark phase=20] table[x=budget, y=Clu] {kappabest.plot};\addlegendentry{Clu}
-% \addplot+[black,  mark=square,          mark options={solid, scale=1},   densely dashed, mark repeat=200, mark phase=30] table[x=budget, y=Mar] {kappabest.plot};\addlegendentry{Mar}
-% \addplot+[red,    mark=triangle*,       mark options={solid, scale=0.8}, dotted, thick, mark repeat=200, mark phase=40] table[x=budget, y=EERent] {kappabest.plot};\addlegendentry{EERent}
-% % \addplot+[gray,   mark=star,            mark options={solid, scale=1}, mark repeat=200, mark phase=40] table[x=budget, y=EERacu] {kappabest.plot};\addlegendentry{EERacu}
-% \addplot+[olive,  mark=10-pointed star, mark options={solid, scale=1}, mark repeat=200, mark phase=50] table[x=budget, y=SGmulti] {kappabest.plot};\addlegendentry{\textbf{SGmulti}}
-% \addplot+[dark green,  mark=diamond,         mark options={solid, scale=1}, mark repeat=200, mark phase=60] table[x=budget, y=DWeuc] {kappabest.plot};\addlegendentry{DWeuc}
-% % \addplot+[blue,   mark=*,               mark options={solid, scale=1},   densely dashed, mark repeat=200, mark phase=70] table[x=budget, y=TUman] {kappabest.plot};\addlegendentry{TUman}
-% % \addplot+[violet, mark=10-pointed star, mark options={solid, scale=1},   densely dotted, mark repeat=200, mark phase=80] table[x=budget, y=ATUman] {kappabest.plot};\addlegendentry{\textbf{ATUman}}
-% % \addplot+[black,    mark=triangle*,       mark options={solid, scale=1}, mark repeat=200, mark phase=90] table[x=budget, y=ALUman] {kappabegst.plot};\addlegendentry{\textbf{ALUman}}
-% \addplot+[mark repeat=200, mark phase=100] table[x=budget, y=TUmah] {kappabest.plot};\addlegendentry{TUmah}
-% % \addplot+[mark repeat=200, mark phase=110] table[x=budget, y=ATUmah] {kappabest.plot};\addlegendentry{\textbf{ATUmah}}
-% \addplot+[mark repeat=200, mark phase=120] table[x=budget, y=ALUmah] {kappabest.plot};\addlegendentry{\textbf{ALUmah}}
-% \end{axis}
-% \end{tikzpicture}
-% \end{center}
-% \end{figure}
-
 \begin{figure}
 \caption{Curva de aprendizado média de todas as bases com mais de 200 exemplos.}
 \begin{center}
 \begin{tikzpicture}[scale=1]
-\begin{axis}[xlabel=consultas, ylabel=Kappa, legend style={at={(0.9,0.1)}, anchor=south east}, grid = both,
+\begin{axis}[xlabel=consultas, ylabel=kappa, legend style={at={(0.95,0.5)}, anchor=west}, grid = both,
 scale only axis, width=300]
-% \addplot+[dotted, green!50!black, thick, mark options={solid, scale=1},   mark=*, mark repeat=200, mark phase=80] table[x=budget, y=Rnd] {kappabest.plot};\addlegendentry{Rnd}
-% % \addplot+[violet, mark=pentagon, mark repeat=200, mark phase=90] table[x=budget, y=Clu] {kappabest.plot};\addlegendentry{Clu}
-% \addplot+[black,  mark=square,          mark options={solid, scale=1},   densely dashed, mark repeat=200, mark phase=100] table[x=budget, y=Mar] {kappabest.plot};\addlegendentry{Mar}
-% \addplot+[red,    mark=triangle*,       mark options={solid, scale=0.8}, dotted, thick, mark repeat=200, mark phase=110] table[x=budget, y=EERent] {kappabest.plot};\addlegendentry{EERent}
-% % \addplot+[gray,   mark=star,            mark options={solid, scale=1}, mark repeat=200, mark phase=120] table[x=budget, y=EERacu] {kappabest.plot};\addlegendentry{EERacu}
-% \addplot+[olive,  mark=star, mark options={solid, scale=1}, mark repeat=200, mark phase=130] table[x=budget, y=SGmulti] {kappabest.plot};\addlegendentry{\textbf{SGmulti}}
-% \addplot+[dark green,  mark=diamond,         mark options={solid, scale=1}, mark repeat=200, mark phase=140] table[x=budget, y=DWeuc] {kappabest.plot};\addlegendentry{DWeuc}
-\addplot+[blue,   mark=*,               mark options={solid, scale=1},   densely dashed, mark repeat=200, mark phase=150] table[x=budget, y=TUman] {kappabest.plot};\addlegendentry{TUman}
-\addplot+[black,   mark=*,               mark options={solid, scale=1},   densely dashed, mark repeat=200, mark phase=150] table[x=budget, y=LUman] {kappabest.plot};\addlegendentry{LUman}
-\addplot+[violet, mark=10-pointed star, mark options={solid, scale=1},   densely dotted, mark repeat=200, mark phase=160] table[x=budget, y=ATUman] {kappabest.plot};\addlegendentry{\textbf{ATUman}}
-\addplot+[black,    mark=triangle,       mark options={solid, scale=1}, dashdotdotted, mark repeat=200, mark phase=170] table[x=budget, y=ALUman] {kappabest.plot};\addlegendentry{\textbf{ALUman}}
-\addplot+[gray,    mark=star, mark options={solid, scale=1}, dashdotted, mark repeat=200, mark phase=180] table[x=budget, y=TUmah] {kappabest.plot};\addlegendentry{TUmah}
-\addplot+[orange,    mark=triangle*, mark repeat=200, mark phase=180] table[x=budget, y=TUmah] {kappabest.plot};\addlegendentry{LUmah}
-\addplot+[mark repeat=200, mark phase=190] table[x=budget, y=ATUmah] {kappabest.plot};\addlegendentry{\textbf{ATUmah}}
-\addplot+[violet, mark=pentagon, mark repeat=200, mark phase=20] table[x=budget, y=ALUmah] {kappabest.plot};\addlegendentry{\textbf{ALUmah}}
+
+\addplot+[orange, densely dashed, thick, mark options={solid, scale=1.5}, mark repeat=200, mark phase=48] table[x=budget, y=ATUmah] {kappamediaall.plot};\addlegendentry{\textbf{ATUmah}}
+% \addplot+[violet, thick, mark=pentagon, mark options={solid, scale=1.5}, mark repeat=200, mark phase=60] table[x=budget, y=ALUmah] {kappamediaall.plot};\addlegendentry{\textbf{ALUmah}}
+\addplot+[violet, thick, mark=10-pointed star, mark options={solid, scale=1.5}, densely dotted, mark repeat=200, mark phase=24] table[x=budget, y=ATUman] {kappamediaall.plot};\addlegendentry{\textbf{ATUman}}
+% \addplot+[dashed, thick, black, mark=triangle*, mark options={solid, scale=1.5}, mark repeat=200, mark phase=36] table[x=budget, y=ALUman] {kappamediaall.plot};\addlegendentry{\textbf{ALUman}}
+\addplot+[solid, red, mark=triangle*, mark repeat=200, mark phase=156] table[x=budget, y=TUmah] {kappamediaall.plot};\addlegendentry{TUmah}
+% \addplot+[solid, thick, orange, mark=triangle*, mark options={solid, scale=1.5}, mark repeat=200, mark phase=168] table[x=budget, y=LUmah] {kappamediaall.plot};\addlegendentry{LUmah}
+\addplot+[solid, gray, mark=*, mark options={solid, scale=1}, mark repeat=200, mark phase=132] table[x=budget, y=TUman] {kappamediaall.plot};\addlegendentry{TUman}
+% \addplot+[solid, thick, black, mark=*, mark options={solid, scale=1.5}, mark repeat=200, mark phase=144] table[x=budget, y=LUman] {kappamediaall.plot};\addlegendentry{LUman}
+
+% \addplot+[blue, densely dashed, thick, mark options={solid, scale=1.5}, mark repeat=200, mark phase=48] table[x=budget, y=ATUeuc] {kappamediaall.plot};\addlegendentry{\textbf{ATUeuc}}
+% \addplot+[green, thick, mark=pentagon, mark options={solid, scale=1.5}, mark repeat=200, mark phase=60] table[x=budget, y=ALUeuc] {kappamediaall.plot};\addlegendentry{\textbf{ALUeuc}}
+
+\addplot+[solid, black, mark=square, mark options={solid, scale=1}, mark repeat=200, mark phase=72] table[x=budget, y=Mar] {kappamediaall.plot};\addlegendentry{Mar}
+\addplot+[solid, gray, mark=star, mark options={solid, scale=1}, mark repeat=200, mark phase=96] table[x=budget, y=EERacu] {kappamediaall.plot};\addlegendentry{EERacu}
+\addplot+[solid, dark green, mark=triangle*, mark options={solid, scale=1}, mark repeat=200, mark phase=84] table[x=budget, y=EERent] {kappamediaall.plot};\addlegendentry{EERent}
+\addplot+[solid, thick, olive, mark=star, mark options={solid, scale=1.5}, mark repeat=200, mark phase=108] table[x=budget, y=SGmulti] {kappamediaall.plot};\addlegendentry{\textbf{SGmulti}}
+
+\addplot+[dashed, violet, mark=pentagon, mark options={solid, scale=1}, mark repeat=200, mark phase=12] table[x=budget, y=Clu] {kappamediaall.plot};\addlegendentry{Clu}
+\addplot+[dotted, green!50!black, thick, mark options={solid, scale=1}, mark=*, mark repeat=200, mark phase=1] table[x=budget, y=Rnd] {kappamediaall.plot};\addlegendentry{Rnd}
+
+% \addplot+[solid, blue, mark=triangle*, mark repeat=200, mark phase=156] table[x=budget, y=TUeuc] {kappamediaall.plot};\addlegendentry{TUeuc}
+% \addplot+[solid, red, thick, mark=triangle*, mark options={solid, scale=1.5}, mark repeat=200, mark phase=168] table[x=budget, y=LUeuc] {kappamediaall.plot};\addlegendentry{LUeuc}
+
+\addplot+[solid, dark green, mark=diamond, mark options={solid, scale=1}, mark repeat=200, mark phase=120] table[x=budget, y=DWeuc] {kappamediaall.plot};\addlegendentry{DWeuc}
+
 \end{axis}
 \end{tikzpicture}
 \end{center}
 \end{figure}
+
+% \begin{figure}
+% \caption{Curva de aprendizado média de todas as bases com mais de 200 exemplos.}
+% \begin{center}
+% \begin{tikzpicture}[scale=1]
+% \begin{axis}[xlabel=consultas, ylabel=kappa, legend style={at={(0.95,0.5)}, anchor=west}, grid = both,
+% scale only axis, width=300]
+% 
+% \addplot+[orange, densely dashed, thick, mark options={solid, scale=1.5}, mark repeat=200, mark phase=48] table[x=budget, y=ATUmah] {kappamedianallRedux.plot};\addlegendentry{\textbf{ATUmah}}
+% % \addplot+[violet, thick, mark=pentagon, mark options={solid, scale=1.5}, mark repeat=200, mark phase=60] table[x=budget, y=ALUmah] {kappamedianallRedux.plot};\addlegendentry{\textbf{ALUmah}}
+% \addplot+[violet, thick, mark=10-pointed star, mark options={solid, scale=1.5}, densely dotted, mark repeat=200, mark phase=24] table[x=budget, y=ATUman] {kappamedianallRedux.plot};\addlegendentry{\textbf{ATUman}}
+% % \addplot+[dashed, thick, black, mark=triangle*, mark options={solid, scale=1.5}, mark repeat=200, mark phase=36] table[x=budget, y=ALUman] {kappamedianallRedux.plot};\addlegendentry{\textbf{ALUman}}
+% \addplot+[solid, red, mark=triangle*, mark repeat=200, mark phase=156] table[x=budget, y=TUmah] {kappamedianallRedux.plot};\addlegendentry{TUmah}
+% % \addplot+[solid, thick, orange, mark=triangle*, mark options={solid, scale=1.5}, mark repeat=200, mark phase=168] table[x=budget, y=LUmah] {kappamedianallRedux.plot};\addlegendentry{LUmah}
+% \addplot+[solid, gray, mark=*, mark options={solid, scale=1}, mark repeat=200, mark phase=132] table[x=budget, y=TUman] {kappamedianallRedux.plot};\addlegendentry{TUman}
+% % \addplot+[solid, thick, black, mark=*, mark options={solid, scale=1.5}, mark repeat=200, mark phase=144] table[x=budget, y=LUman] {kappamedianallRedux.plot};\addlegendentry{LUman}
+% 
+% % \addplot+[blue, densely dashed, thick, mark options={solid, scale=1.5}, mark repeat=200, mark phase=48] table[x=budget, y=ATUeuc] {kappamedianallRedux.plot};\addlegendentry{\textbf{ATUeuc}}
+% % \addplot+[green, thick, mark=pentagon, mark options={solid, scale=1.5}, mark repeat=200, mark phase=60] table[x=budget, y=ALUeuc] {kappamedianallRedux.plot};\addlegendentry{\textbf{ALUeuc}}
+% 
+% \addplot+[solid, black, mark=square, mark options={solid, scale=1}, mark repeat=200, mark phase=72] table[x=budget, y=Mar] {kappamedianallRedux.plot};\addlegendentry{Mar}
+% \addplot+[solid, gray, mark=star, mark options={solid, scale=1}, mark repeat=200, mark phase=96] table[x=budget, y=EERacu] {kappamedianallRedux.plot};\addlegendentry{EERacu}
+% \addplot+[solid, green, mark=triangle*, mark options={solid, scale=1}, mark repeat=200, mark phase=84] table[x=budget, y=EERent] {kappamedianallRedux.plot};\addlegendentry{EERent}
+% \addplot+[solid, thick, olive, mark=star, mark options={solid, scale=1.5}, mark repeat=200, mark phase=108] table[x=budget, y=SGmulti] {kappamedianallRedux.plot};\addlegendentry{\textbf{SGmulti}}
+% 
+% \addplot+[dashed, violet, mark=pentagon, mark options={solid, scale=1}, mark repeat=200, mark phase=12] table[x=budget, y=Clu] {kappamedianallRedux.plot};\addlegendentry{Clu}
+% \addplot+[dotted, green!50!black, thick, mark options={solid, scale=1}, mark=*, mark repeat=200, mark phase=1] table[x=budget, y=Rnd] {kappamedianallRedux.plot};\addlegendentry{Rnd}
+% 
+% % \addplot+[solid, blue, mark=triangle*, mark repeat=200, mark phase=156] table[x=budget, y=TUeuc] {kappamedianallRedux.plot};\addlegendentry{TUeuc}
+% % \addplot+[solid, red, thick, mark=triangle*, mark options={solid, scale=1.5}, mark repeat=200, mark phase=168] table[x=budget, y=LUeuc] {kappamedianallRedux.plot};\addlegendentry{LUeuc}
+% 
+% \addplot+[solid, dark green, mark=diamond, mark options={solid, scale=1}, mark repeat=200, mark phase=120] table[x=budget, y=DWeuc] {kappamedianallRedux.plot};\addlegendentry{DWeuc}
+% 
+% \end{axis}
+% \end{tikzpicture}
+% \end{center}
+% \end{figure}
