--- a/stratDistsRedux.tex
+++ b/stratDistsRedux.tex
@@ -1,18 +1,16 @@
 \begin{table}[h]
-\caption{Similaridade entre estratégias de acordo com a acurácia balanceada para as 94 bases de dados. O maior e o menor valor de cada linha está em \textcolor{blue}{\textbf{azul}} e \textcolor{red}{\textbf{vermelho}} respectivamente. Valores iguais ou acima de $0,5$ estão em negrito.}
-\begin{center}\scalebox{0.8}{\begin{tabular}{lcc|cc|cc|cc|cc|cc|c}
- 				& \begin{sideways}Rnd\end{sideways} & \begin{sideways}Clu\end{sideways} & \begin{sideways}Mar\end{sideways} & \begin{sideways}EERent\end{sideways} & \begin{sideways}EERacu\end{sideways} & \begin{sideways}SGmulti\end{sideways} & \begin{sideways}DWeuc\end{sideways} & \begin{sideways}TUman\end{sideways} & \begin{sideways}ATUman\end{sideways} & \begin{sideways}ALUman\end{sideways} & \begin{sideways}TUmah\end{sideways} & \begin{sideways}ATUmah\end{sideways} & \begin{sideways}ALUmah\end{sideways} \\Rnd	& - & \textcolor{blue}{\textbf{  0.67}} &   0.39 &   0.47 & \textbf{  0.50} & \textbf{  0.58} &   0.25 &   0.39 & \textbf{  0.54} & \textbf{  0.54} & \textcolor{red}{\textbf{  0.20}} &   0.21 &   0.21 \\
-Clu	& \textcolor{blue}{\textbf{  0.67}} & - &   0.38 &   0.48 & \textbf{  0.51} & \textbf{  0.56} &   0.25 &   0.40 & \textbf{  0.57} & \textbf{  0.58} & \textcolor{red}{\textbf{  0.20}} &   0.21 &   0.21 \\ \hline
-Mar	&   0.39 &   0.38 & - &   0.41 &   0.42 &   0.40 &   0.27 & \textcolor{blue}{\textbf{  0.54}} &   0.36 &   0.36 &   0.21 & \textcolor{red}{\textbf{  0.20}} & \textcolor{red}{\textbf{  0.20}} \\
-EERent	&   0.47 & \textcolor{blue}{\textbf{  0.48}} &   0.41 & - &   0.46 &   0.44 &   0.25 &   0.41 &   0.41 &   0.42 & \textcolor{red}{\textbf{  0.21}} & \textcolor{red}{\textbf{  0.21}} & \textcolor{red}{\textbf{  0.21}} \\ \hline
-EERacu	& \textbf{  0.50} & \textcolor{blue}{\textbf{  0.51}} &   0.42 &   0.46 & - &   0.47 &   0.25 &   0.41 &   0.44 &   0.45 & \textcolor{red}{\textbf{  0.21}} & \textcolor{red}{\textbf{  0.21}} & \textcolor{red}{\textbf{  0.21}} \\
-SGmulti	& \textcolor{blue}{\textbf{  0.58}} & \textbf{  0.56} &   0.40 &   0.44 &   0.47 & - &   0.25 &   0.41 & \textbf{  0.51} & \textbf{  0.51} & \textcolor{red}{\textbf{  0.20}} &   0.21 &   0.21 \\ \hline
-DWeuc	&   0.25 &   0.25 & \textcolor{blue}{\textbf{  0.27}} &   0.25 &   0.25 &   0.25 & - &   0.26 &   0.23 &   0.23 &   0.18 & \textcolor{red}{\textbf{  0.17}} & \textcolor{red}{\textbf{  0.17}} \\
-TUman	&   0.39 &   0.40 & \textcolor{blue}{\textbf{  0.54}} &   0.41 &   0.41 &   0.41 &   0.26 & - &   0.40 &   0.40 &   0.21 & \textcolor{red}{\textbf{  0.20}} & \textcolor{red}{\textbf{  0.20}} \\ \hline
-ATUman	& \textbf{  0.54} & \textbf{  0.57} &   0.36 &   0.41 &   0.44 & \textbf{  0.51} &   0.23 &   0.40 & - & \textcolor{blue}{\textbf{  0.77}} & \textcolor{red}{\textbf{  0.20}} &   0.21 &   0.21 \\
-ALUman	& \textbf{  0.54} & \textbf{  0.58} &   0.36 &   0.42 &   0.45 & \textbf{  0.51} &   0.23 &   0.40 & \textcolor{blue}{\textbf{  0.77}} & - & \textcolor{red}{\textbf{  0.20}} &   0.21 &   0.21 \\ \hline
-TUmah	&   0.20 &   0.20 &   0.21 &   0.21 &   0.21 &   0.20 & \textcolor{red}{\textbf{  0.18}} &   0.21 &   0.20 &   0.20 & - & \textcolor{blue}{\textbf{  0.38}} &   0.37 \\
-ATUmah	&   0.21 &   0.21 &   0.20 &   0.21 &   0.21 &   0.21 & \textcolor{red}{\textbf{  0.17}} &   0.20 &   0.21 &   0.21 &   0.38 & - & \textcolor{blue}{\textbf{  0.69}} \\ \hline
-ALUmah	&   0.21 &   0.21 &   0.20 &   0.21 &   0.21 &   0.21 & \textcolor{red}{\textbf{  0.17}} &   0.20 &   0.21 &   0.21 &   0.37 & \textcolor{blue}{\textbf{  0.69}} & - \\\end{tabular}}\label{stratDistsRedux}
+\caption{Similaridade entre estratégias de acordo com a acurácia balanceada para as 94 bases de dados. O maior e o menor valor de cada linha está em \textcolor{blue}{\textbf{azul}} e \textcolor{red}{\textbf{vermelho}} respectivamente. Valores iguais ou acima de $0,50$ estão em negrito.}
+\begin{center}\scalebox{0.9}{\begin{tabular}{lcc|cc|cc|cc|cc|c}
+ 				& \begin{sideways}Rnd\end{sideways} & \begin{sideways}Clu\end{sideways} & \begin{sideways}Mar\end{sideways} & \begin{sideways}EERent\end{sideways} & \begin{sideways}EERacu\end{sideways} & \begin{sideways}\textbf{SGmulti}\end{sideways} & \begin{sideways}DWeuc\end{sideways} & \begin{sideways}TUman\end{sideways} & \begin{sideways}\textbf{ATUman}\end{sideways} & \begin{sideways}TUmah\end{sideways} & \begin{sideways}\textbf{ATUmah}\end{sideways} \\Rnd	& - & \textcolor{blue}{\textbf{  0.67}} &   0.39 &   0.47 & \textbf{  0.50} & \textbf{  0.58} &   0.25 &   0.39 & \textbf{  0.54} & \textcolor{red}{\textbf{  0.20}} &   0.21 \\
+Clu	& \textcolor{blue}{\textbf{  0.67}} & - &   0.38 &   0.48 & \textbf{  0.51} & \textbf{  0.56} &   0.25 &   0.40 & \textbf{  0.57} & \textcolor{red}{\textbf{  0.20}} &   0.21 \\ \hline
+Mar	&   0.39 &   0.38 & - &   0.41 &   0.42 &   0.40 &   0.27 & \textcolor{blue}{\textbf{  0.54}} &   0.36 &   0.21 & \textcolor{red}{\textbf{  0.20}} \\
+EERent	&   0.47 & \textcolor{blue}{\textbf{  0.48}} &   0.41 & - &   0.46 &   0.44 &   0.25 &   0.41 &   0.41 & \textcolor{red}{\textbf{  0.21}} & \textcolor{red}{\textbf{  0.21}} \\ \hline
+EERacu	& \textbf{  0.50} & \textcolor{blue}{\textbf{  0.51}} &   0.42 &   0.46 & - &   0.47 &   0.25 &   0.41 &   0.44 & \textcolor{red}{\textbf{  0.21}} & \textcolor{red}{\textbf{  0.21}} \\
+\textbf{SGmulti}	& \textcolor{blue}{\textbf{  0.58}} & \textbf{  0.56} &   0.40 &   0.44 &   0.47 & - &   0.25 &   0.41 & \textbf{  0.51} & \textcolor{red}{\textbf{  0.20}} &   0.21 \\ \hline
+DWeuc	&   0.25 &   0.25 & \textcolor{blue}{\textbf{  0.27}} &   0.25 &   0.25 &   0.25 & - &   0.26 &   0.23 &   0.18 & \textcolor{red}{\textbf{  0.17}} \\
+TUman	&   0.39 &   0.40 & \textcolor{blue}{\textbf{  0.54}} &   0.41 &   0.41 &   0.41 &   0.26 & - &   0.40 &   0.21 & \textcolor{red}{\textbf{  0.20}} \\ \hline
+\textbf{ATUman}	& \textbf{  0.54} & \textcolor{blue}{\textbf{  0.57}} &   0.36 &   0.41 &   0.44 & \textbf{  0.51} &   0.23 &   0.40 & - & \textcolor{red}{\textbf{  0.20}} &   0.21 \\
+TUmah	&   0.20 &   0.20 &   0.21 &   0.21 &   0.21 &   0.20 & \textcolor{red}{\textbf{  0.18}} &   0.21 &   0.20 & - & \textcolor{blue}{\textbf{  0.38}} \\ \hline
+\textbf{ATUmah}	&   0.21 &   0.21 &   0.20 &   0.21 &   0.21 &   0.21 & \textcolor{red}{\textbf{  0.17}} &   0.20 &   0.21 & \textcolor{blue}{\textbf{  0.38}} & - \\\end{tabular}}\label{stratDistsRedux}
 \end{center}
 \end{table}
