--- a/stratsALCKappaC4.5.tex
+++ b/stratsALCKappaC4.5.tex
@@ -2,7 +2,7 @@
 \begin{table}[h]
 \caption{ALCKappa para C4.5: Os maiores valores da média e desvio padrão de cada base está em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados estão sublinhados. Os menores valores de desvio padrão estão em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
- & Rnd & Clu & Unc & Ent & Mar & EERent & EERacu & SGmulti & DWeuc & TUeuc & ATUeuc\\ \hline 1-abalone 3class &   0.31/  0.03 &   0.32/\textcolor{black}{\textbf{  0.02}} &   0.31/  0.05 &   0.31/  0.05 &   0.31/  0.04 &   0.31/  0.04 &   0.32/  0.03 &   0.32/  0.03 & \textcolor{red}{\textbf{  0.24}}/  0.07 &   0.33/\textcolor{black}{\textbf{  0.02}} &   0.32/  0.03 \\
+ & Rnd & Clu & Unc & Ent & Mar & EERent & EERacu & \textbf{SGmulti} & DWeuc & TUeuc & \textbf{ATUeuc}\\ \hline 1-abalone 3class &   0.31/  0.03 &   0.32/\textcolor{black}{\textbf{  0.02}} &   0.31/  0.05 &   0.31/  0.05 &   0.31/  0.04 &   0.31/  0.04 &   0.32/  0.03 &   0.32/  0.03 & \textcolor{red}{\textbf{  0.24}}/  0.07 &   0.33/\textcolor{black}{\textbf{  0.02}} &   0.32/  0.03 \\
 2-arcene &   0.31/  0.07 &   0.30/  0.06 &   0.30/  0.07 &   0.30/  0.07 &   0.30/  0.07 &   0.30/\textcolor{black}{\textbf{  0.05}} &   0.30/  0.06 &   0.31/  0.06 &   0.30/  0.07 & \textcolor{blue}{\textbf{  0.32}}/\textcolor{black}{\textbf{  0.05}} &   0.30/\textcolor{black}{\textbf{  0.05}} \\
 3-artificial charact... &   0.21/  0.02 &   0.21/\textcolor{black}{\textbf{  0.01}} &   0.20/  0.02 &   0.18/  0.03 &   0.20/  0.03 &   0.22/  0.02 &   0.21/  0.02 &   0.21/  0.02 & \textcolor{red}{\textbf{  0.08}}/  0.02 &   0.23/  0.02 &   0.23/\textcolor{black}{\textbf{  0.01}} \\
 4-autoUniv au1 1000 &   0.10/  0.05 &   0.11/  0.06 &   0.10/  0.06 &   0.10/  0.06 &   0.10/  0.06 &   0.12/  0.05 &   0.12/  0.06 &   0.11/  0.06 &   0.13/  0.06 & \textcolor{red}{\textbf{  0.08}}/  0.05 &   0.13/  0.05 \\
@@ -39,7 +39,7 @@
 \begin{table}[h]
 \caption{ALCKappa para C4.5: Os maiores valores da média e desvio padrão de cada base está em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados estão sublinhados. Os menores valores de desvio padrão estão em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c}
- & LUeuc & ALUeuc & TUman & ATUman & LUman & ALUman & TUmah & ATUmah & LUmah & ALUmah\\ \hline 1-abalone 3class &   0.32/  0.03 & \textcolor{blue}{\textbf{  0.34}}/  0.03 &   0.32/  0.04 & \textcolor{blue}{\textbf{  0.34}}/  0.03 &   0.32/  0.04 & \textcolor{blue}{\textbf{  0.34}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.34}}/\textcolor{black}{\textbf{  0.02}} &   0.33/  0.03 &   0.33/  0.03 &   0.32/\textcolor{black}{\textbf{  0.02}} \\
+ & \textbf{LUeuc} & \textbf{ALUeuc} & TUman & \textbf{ATUman} & \textbf{LUman} & \textbf{ALUman} & TUmah & \textbf{ATUmah} & \textbf{LUmah} & \textbf{ALUmah}\\ \hline 1-abalone 3class &   0.32/  0.03 & \textcolor{blue}{\textbf{  0.34}}/  0.03 &   0.32/  0.04 & \textcolor{blue}{\textbf{  0.34}}/  0.03 &   0.32/  0.04 & \textcolor{blue}{\textbf{  0.34}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.34}}/\textcolor{black}{\textbf{  0.02}} &   0.33/  0.03 &   0.33/  0.03 &   0.32/\textcolor{black}{\textbf{  0.02}} \\
 2-arcene & \textcolor{blue}{\textbf{  0.32}}/  0.06 &   0.31/  0.07 &   0.31/  0.06 &   0.31/  0.06 &   0.31/\textcolor{black}{\textbf{  0.05}} & \textcolor{blue}{\textbf{  0.32}}/  0.06 &   0.30/  0.06 & \textcolor{red}{\textbf{  0.29}}/  0.06 &   0.30/  0.08 &   0.30/  0.08 \\
 3-artificial charact... &   0.22/  0.03 &   0.22/  0.02 & \textcolor{blue}{\textbf{  0.24}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.24}}/\textcolor{black}{\textbf{  0.01}} &   0.23/  0.02 &   0.23/\textcolor{black}{\textbf{  0.01}} &   0.23/  0.02 &   0.23/  0.02 &   0.23/\textcolor{black}{\textbf{  0.01}} &   0.22/  0.02 \\
 4-autoUniv au1 1000 &   0.12/  0.06 &   0.13/  0.07 &   0.12/  0.06 & \textcolor{blue}{\textbf{  0.14}}/\textcolor{black}{\textbf{  0.04}} &   0.11/  0.06 & \textcolor{blue}{\textbf{  0.14}}/  0.06 &   0.09/  0.06 &   0.13/  0.06 &   0.12/  0.06 &   0.13/\textcolor{black}{\textbf{  0.04}} \\
@@ -76,7 +76,7 @@
 \begin{table}[h]
 \caption{ALCKappa para C4.5: Os maiores valores da média e desvio padrão de cada base está em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados estão sublinhados. Os menores valores de desvio padrão estão em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
- & Rnd & Clu & Unc & Ent & Mar & EERent & EERacu & SGmulti & DWeuc & TUeuc & ATUeuc\\ \hline 33-leukemia haslinger &   0.36/  0.11 &   0.37/  0.11 &   0.37/  0.11 &   0.37/  0.11 &   0.37/  0.11 &   0.37/  0.10 &   0.37/  0.11 &   0.36/  0.11 &   0.37/  0.10 & \textcolor{black}{\textbf{  0.38}}/  0.10 &   0.37/  0.10 \\
+ & Rnd & Clu & Unc & Ent & Mar & EERent & EERacu & \textbf{SGmulti} & DWeuc & TUeuc & \textbf{ATUeuc}\\ \hline 33-leukemia haslinger &   0.36/  0.11 &   0.37/  0.11 &   0.37/  0.11 &   0.37/  0.11 &   0.37/  0.11 &   0.37/  0.10 &   0.37/  0.11 &   0.36/  0.11 &   0.37/  0.10 & \textcolor{black}{\textbf{  0.38}}/  0.10 &   0.37/  0.10 \\
 34-mammographic mass &   0.58/\textcolor{black}{\textbf{  0.04}} &   0.58/  0.05 &   0.57/  0.06 &   0.57/  0.06 &   0.57/  0.06 &   0.58/  0.05 &   0.58/\textcolor{black}{\textbf{  0.04}} & \textcolor{blue}{\textbf{  0.59}}/\textcolor{black}{\textbf{  0.04}} & \textcolor{red}{\textbf{  0.54}}/  0.08 &   0.57/  0.09 & \textcolor{blue}{\textbf{  0.59}}/  0.06 \\
 35-mfeat fourier &   0.48/  0.03 &   0.49/  0.03 &   0.48/  0.03 &   0.48/  0.03 &   0.48/  0.04 &   0.48/  0.04 &   0.49/\textcolor{black}{\textbf{  0.02}} &   0.49/  0.04 & \textcolor{red}{\textbf{  0.39}}/  0.03 &   0.51/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.53}}/\textcolor{black}{\textbf{  0.02}} \\
 36-molecular promotor... &   0.48/  0.07 &   0.44/  0.08 &   0.49/  0.08 &   0.49/  0.08 &   0.49/  0.08 &   0.48/  0.08 &   0.47/\textcolor{black}{\textbf{  0.06}} &   0.49/\textcolor{black}{\textbf{  0.06}} & \textcolor{red}{\textbf{  0.30}}/  0.07 & \underline{\textcolor{blue}{\textbf{  0.52}}}/  0.09 &   0.50/  0.08 \\
@@ -113,7 +113,7 @@
 \begin{table}[h]
 \caption{ALCKappa para C4.5: Os maiores valores da média e desvio padrão de cada base está em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados estão sublinhados. Os menores valores de desvio padrão estão em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c}
- & LUeuc & ALUeuc & TUman & ATUman & LUman & ALUman & TUmah & ATUmah & LUmah & ALUmah\\ \hline 33-leukemia haslinger &   0.37/  0.11 &   0.37/  0.12 &   0.37/  0.11 & \textcolor{black}{\textbf{  0.38}}/\textcolor{darkgreen}{\textbf{  0.07}} & \textcolor{black}{\textbf{  0.38}}/\textcolor{black}{\textbf{  0.09}} & \underline{\textcolor{blue}{\textbf{  0.40}}}/  0.11 & \textcolor{black}{\textbf{  0.38}}/  0.11 & \textcolor{black}{\textbf{  0.38}}/  0.10 & \textcolor{red}{\textbf{  0.35}}/  0.11 &   0.36/  0.13 \\
+ & \textbf{LUeuc} & \textbf{ALUeuc} & TUman & \textbf{ATUman} & \textbf{LUman} & \textbf{ALUman} & TUmah & \textbf{ATUmah} & \textbf{LUmah} & \textbf{ALUmah}\\ \hline 33-leukemia haslinger &   0.37/  0.11 &   0.37/  0.12 &   0.37/  0.11 & \textcolor{black}{\textbf{  0.38}}/\textcolor{darkgreen}{\textbf{  0.07}} & \textcolor{black}{\textbf{  0.38}}/\textcolor{black}{\textbf{  0.09}} & \underline{\textcolor{blue}{\textbf{  0.40}}}/  0.11 & \textcolor{black}{\textbf{  0.38}}/  0.11 & \textcolor{black}{\textbf{  0.38}}/  0.10 & \textcolor{red}{\textbf{  0.35}}/  0.11 &   0.36/  0.13 \\
 34-mammographic mass &   0.57/  0.07 &   0.58/  0.05 &   0.58/  0.06 & \textcolor{blue}{\textbf{  0.59}}/  0.05 &   0.58/  0.06 &   0.58/  0.05 &   0.58/  0.05 &   0.58/  0.05 & \textcolor{blue}{\textbf{  0.59}}/  0.05 & \textcolor{blue}{\textbf{  0.59}}/  0.05 \\
 35-mfeat fourier &   0.50/  0.03 &   0.52/\textcolor{black}{\textbf{  0.02}} &   0.51/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.53}}/  0.03 &   0.51/\textcolor{black}{\textbf{  0.02}} &   0.52/\textcolor{black}{\textbf{  0.02}} &   0.51/\textcolor{black}{\textbf{  0.02}} &   0.52/\textcolor{black}{\textbf{  0.02}} &   0.50/\textcolor{black}{\textbf{  0.02}} &   0.52/  0.03 \\
 36-molecular promotor... & \textcolor{black}{\textbf{  0.51}}/  0.09 &   0.47/  0.09 &   0.50/  0.10 &   0.49/  0.08 &   0.50/  0.09 &   0.48/  0.09 &   0.49/  0.08 &   0.46/  0.08 &   0.49/  0.09 &   0.45/  0.09 \\
@@ -150,7 +150,7 @@
 \begin{table}[h]
 \caption{ALCKappa para C4.5: Os maiores valores da média e desvio padrão de cada base está em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados estão sublinhados. Os menores valores de desvio padrão estão em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
- & Rnd & Clu & Unc & Ent & Mar & EERent & EERacu & SGmulti & DWeuc & TUeuc & ATUeuc\\ \hline 65-statlog heart &   0.50/\textcolor{black}{\textbf{  0.06}} &   0.48/  0.07 &   0.48/\textcolor{black}{\textbf{  0.06}} &   0.48/\textcolor{black}{\textbf{  0.06}} &   0.48/\textcolor{black}{\textbf{  0.06}} & \textcolor{red}{\textbf{  0.47}}/  0.07 &   0.49/  0.07 & \textcolor{blue}{\textbf{  0.51}}/  0.07 & \textcolor{red}{\textbf{  0.47}}/  0.08 &   0.49/  0.08 &   0.50/  0.07 \\
+ & Rnd & Clu & Unc & Ent & Mar & EERent & EERacu & \textbf{SGmulti} & DWeuc & TUeuc & \textbf{ATUeuc}\\ \hline 65-statlog heart &   0.50/\textcolor{black}{\textbf{  0.06}} &   0.48/  0.07 &   0.48/\textcolor{black}{\textbf{  0.06}} &   0.48/\textcolor{black}{\textbf{  0.06}} &   0.48/\textcolor{black}{\textbf{  0.06}} & \textcolor{red}{\textbf{  0.47}}/  0.07 &   0.49/  0.07 & \textcolor{blue}{\textbf{  0.51}}/  0.07 & \textcolor{red}{\textbf{  0.47}}/  0.08 &   0.49/  0.08 &   0.50/  0.07 \\
 66-statlog image segm... &   0.77/\textcolor{black}{\textbf{  0.02}} &   0.76/\textcolor{black}{\textbf{  0.02}} &   0.76/  0.03 &   0.76/  0.03 &   0.76/  0.03 &   0.77/\textcolor{black}{\textbf{  0.02}} &   0.77/  0.03 &   0.77/  0.03 & \textcolor{red}{\textbf{  0.46}}/  0.08 &   0.78/  0.03 & \textcolor{blue}{\textbf{  0.80}}/\textcolor{black}{\textbf{  0.02}} \\
 67-statlog landsat sa... &   0.66/  0.03 &   0.67/\textcolor{black}{\textbf{  0.02}} &   0.68/\textcolor{black}{\textbf{  0.02}} &   0.68/\textcolor{black}{\textbf{  0.02}} &   0.68/\textcolor{black}{\textbf{  0.02}} &   0.67/  0.03 &   0.67/\textcolor{black}{\textbf{  0.02}} &   0.69/  0.03 & \textcolor{red}{\textbf{  0.50}}/  0.07 & \textcolor{blue}{\textbf{  0.70}}/\textcolor{black}{\textbf{  0.02}} &   0.69/\textcolor{black}{\textbf{  0.02}} \\
 68-statlog vehicle si... &   0.44/  0.03 &   0.44/  0.03 &   0.44/  0.04 &   0.44/  0.04 &   0.44/  0.04 &   0.43/  0.04 &   0.46/  0.03 &   0.45/  0.03 & \textcolor{red}{\textbf{  0.38}}/  0.04 &   0.45/  0.04 &   0.47/  0.03 \\
@@ -185,7 +185,7 @@
 \begin{table}[h]
 \caption{ALCKappa para C4.5: Os maiores valores da média e desvio padrão de cada base está em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados estão sublinhados. Os menores valores de desvio padrão estão em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c}
- & LUeuc & ALUeuc & TUman & ATUman & LUman & ALUman & TUmah & ATUmah & LUmah & ALUmah\\ \hline 65-statlog heart &   0.48/  0.08 &   0.50/\textcolor{black}{\textbf{  0.06}} &   0.50/  0.07 &   0.49/  0.07 & \textcolor{blue}{\textbf{  0.51}}/  0.07 &   0.50/  0.07 & \textcolor{red}{\textbf{  0.47}}/  0.07 &   0.48/  0.07 & \textcolor{red}{\textbf{  0.47}}/  0.08 &   0.48/  0.07 \\
+ & \textbf{LUeuc} & \textbf{ALUeuc} & TUman & \textbf{ATUman} & \textbf{LUman} & \textbf{ALUman} & TUmah & \textbf{ATUmah} & \textbf{LUmah} & \textbf{ALUmah}\\ \hline 65-statlog heart &   0.48/  0.08 &   0.50/\textcolor{black}{\textbf{  0.06}} &   0.50/  0.07 &   0.49/  0.07 & \textcolor{blue}{\textbf{  0.51}}/  0.07 &   0.50/  0.07 & \textcolor{red}{\textbf{  0.47}}/  0.07 &   0.48/  0.07 & \textcolor{red}{\textbf{  0.47}}/  0.08 &   0.48/  0.07 \\
 66-statlog image segm... &   0.77/  0.03 &   0.79/\textcolor{black}{\textbf{  0.02}} &   0.79/  0.03 & \textcolor{blue}{\textbf{  0.80}}/\textcolor{black}{\textbf{  0.02}} &   0.76/  0.03 & \textcolor{blue}{\textbf{  0.80}}/\textcolor{black}{\textbf{  0.02}} &   0.77/\textcolor{black}{\textbf{  0.02}} &   0.79/\textcolor{darkgreen}{\textbf{  0.01}} &   0.76/  0.04 &   0.78/\textcolor{black}{\textbf{  0.02}} \\
 67-statlog landsat sa... & \textcolor{blue}{\textbf{  0.70}}/\textcolor{black}{\textbf{  0.02}} &   0.68/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.70}}/\textcolor{black}{\textbf{  0.02}} &   0.69/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.70}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.70}}/\textcolor{black}{\textbf{  0.02}} &   0.68/  0.03 &   0.68/\textcolor{black}{\textbf{  0.02}} &   0.69/  0.03 &   0.67/\textcolor{black}{\textbf{  0.02}} \\
 68-statlog vehicle si... &   0.46/  0.04 &   0.47/  0.03 &   0.45/  0.03 & \textcolor{blue}{\textbf{  0.48}}/  0.03 &   0.46/  0.05 &   0.47/\textcolor{black}{\textbf{  0.02}} &   0.47/  0.04 & \textcolor{blue}{\textbf{  0.48}}/\textcolor{black}{\textbf{  0.02}} &   0.45/  0.04 &   0.47/  0.03 \\
