--- a/stratsALCKappaCIELM.tex
+++ b/stratsALCKappaCIELM.tex
@@ -2,7 +2,7 @@
 \begin{table}[h]
 \caption{ALCKappa para CIELM: Os maiores valores da média e desvio padrão de cada base está em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados estão sublinhados. Os menores valores de desvio padrão estão em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
- & Rnd & Clu & Unc & Ent & Mar & EERent & EERacu & SGmulti & DWeuc & TUeuc & ATUeuc\\ \hline 1-abalone 3class &   0.32/\textcolor{black}{\textbf{  0.04}} &   0.31/  0.06 & \textcolor{red}{\textbf{  0.26}}/  0.10 & \textcolor{red}{\textbf{  0.26}}/  0.11 &   0.29/  0.10 &   0.32/  0.05 &   0.32/  0.05 &   0.32/\textcolor{black}{\textbf{  0.04}} &   0.27/  0.08 &   0.33/  0.07 &   0.31/  0.05 \\
+ & Rnd & Clu & Unc & Ent & Mar & EERent & EERacu & \textbf{SGmulti} & DWeuc & TUeuc & \textbf{ATUeuc}\\ \hline 1-abalone 3class &   0.32/\textcolor{black}{\textbf{  0.04}} &   0.31/  0.06 & \textcolor{red}{\textbf{  0.26}}/  0.10 & \textcolor{red}{\textbf{  0.26}}/  0.11 &   0.29/  0.10 &   0.32/  0.05 &   0.32/  0.05 &   0.32/\textcolor{black}{\textbf{  0.04}} &   0.27/  0.08 &   0.33/  0.07 &   0.31/  0.05 \\
 2-arcene &   0.17/  0.21 &   0.15/  0.20 &   0.19/\textcolor{black}{\textbf{  0.17}} &   0.19/\textcolor{black}{\textbf{  0.17}} &   0.19/\textcolor{black}{\textbf{  0.17}} &   0.16/\textcolor{black}{\textbf{  0.17}} &   0.20/\textcolor{black}{\textbf{  0.17}} &   0.19/  0.22 & \textcolor{black}{\textbf{  0.21}}/\textcolor{darkgreen}{\textbf{  0.16}} & \textcolor{red}{\textbf{  0.14}}/  0.19 & \textcolor{black}{\textbf{  0.21}}/  0.18 \\
 3-artificial charact... &   0.14/\textcolor{black}{\textbf{  0.02}} &   0.13/  0.03 &   0.10/  0.03 &   0.09/  0.03 &   0.16/  0.03 &   0.14/  0.03 &   0.14/  0.03 &   0.14/  0.03 & \textcolor{red}{\textbf{  0.05}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.17}}/  0.03 &   0.16/\textcolor{black}{\textbf{  0.02}} \\
 4-autoUniv au1 1000 & \textcolor{red}{\textbf{  0.04}}/  0.08 & \textcolor{blue}{\textbf{  0.07}}/\textcolor{black}{\textbf{  0.06}} & \textcolor{blue}{\textbf{  0.07}}/\textcolor{black}{\textbf{  0.06}} & \textcolor{blue}{\textbf{  0.07}}/\textcolor{black}{\textbf{  0.06}} & \textcolor{blue}{\textbf{  0.07}}/\textcolor{black}{\textbf{  0.06}} &   0.05/  0.07 &   0.05/  0.10 & \textcolor{red}{\textbf{  0.04}}/  0.08 & \textcolor{blue}{\textbf{  0.07}}/\textcolor{darkgreen}{\textbf{  0.05}} &   0.05/  0.07 &   0.06/  0.07 \\
@@ -39,7 +39,7 @@
 \begin{table}[h]
 \caption{ALCKappa para CIELM: Os maiores valores da média e desvio padrão de cada base está em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados estão sublinhados. Os menores valores de desvio padrão estão em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c}
- & LUeuc & ALUeuc & TUman & ATUman & LUman & ALUman & TUmah & ATUmah & LUmah & ALUmah\\ \hline 1-abalone 3class &   0.33/  0.06 &   0.31/  0.05 &   0.33/  0.05 &   0.32/\textcolor{black}{\textbf{  0.04}} & \textcolor{black}{\textbf{  0.34}}/  0.05 &   0.32/  0.06 & \underline{\textcolor{blue}{\textbf{  0.35}}}/  0.06 &   0.32/  0.05 & \textcolor{black}{\textbf{  0.34}}/  0.05 &   0.32/\textcolor{black}{\textbf{  0.04}} \\
+ & \textbf{LUeuc} & \textbf{ALUeuc} & TUman & \textbf{ATUman} & \textbf{LUman} & \textbf{ALUman} & TUmah & \textbf{ATUmah} & \textbf{LUmah} & \textbf{ALUmah}\\ \hline 1-abalone 3class &   0.33/  0.06 &   0.31/  0.05 &   0.33/  0.05 &   0.32/\textcolor{black}{\textbf{  0.04}} & \textcolor{black}{\textbf{  0.34}}/  0.05 &   0.32/  0.06 & \underline{\textcolor{blue}{\textbf{  0.35}}}/  0.06 &   0.32/  0.05 & \textcolor{black}{\textbf{  0.34}}/  0.05 &   0.32/\textcolor{black}{\textbf{  0.04}} \\
 2-arcene &   0.18/  0.18 & \underline{\textcolor{blue}{\textbf{  0.26}}}/  0.18 &   0.15/\textcolor{black}{\textbf{  0.17}} &   0.20/  0.18 &   0.16/  0.20 &   0.19/  0.18 &   0.20/\textcolor{black}{\textbf{  0.17}} &   0.15/  0.22 &   0.20/\textcolor{black}{\textbf{  0.17}} &   0.16/  0.22 \\
 3-artificial charact... & \textcolor{blue}{\textbf{  0.17}}/  0.03 &   0.14/\textcolor{black}{\textbf{  0.02}} &   0.16/  0.03 &   0.16/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.17}}/  0.03 &   0.15/  0.03 & \textcolor{blue}{\textbf{  0.17}}/  0.03 &   0.15/\textcolor{black}{\textbf{  0.02}} &   0.16/\textcolor{black}{\textbf{  0.02}} &   0.16/\textcolor{black}{\textbf{  0.02}} \\
 4-autoUniv au1 1000 & \textcolor{blue}{\textbf{  0.07}}/  0.08 &   0.05/  0.08 &   0.06/  0.07 &   0.06/  0.07 &   0.05/  0.07 & \textcolor{blue}{\textbf{  0.07}}/  0.08 &   0.06/  0.08 &   0.06/  0.09 &   0.05/  0.07 &   0.06/  0.08 \\
@@ -76,7 +76,7 @@
 \begin{table}[h]
 \caption{ALCKappa para CIELM: Os maiores valores da média e desvio padrão de cada base está em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados estão sublinhados. Os menores valores de desvio padrão estão em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
- & Rnd & Clu & Unc & Ent & Mar & EERent & EERacu & SGmulti & DWeuc & TUeuc & ATUeuc\\ \hline 33-leukemia haslinger & \textcolor{red}{\textbf{  0.36}}/  0.32 &   0.44/  0.24 &   0.43/  0.24 &   0.43/  0.24 &   0.43/  0.24 &   0.39/  0.25 &   0.41/  0.24 &   0.42/  0.26 &   0.43/  0.26 &   0.44/  0.24 &   0.43/  0.24 \\
+ & Rnd & Clu & Unc & Ent & Mar & EERent & EERacu & \textbf{SGmulti} & DWeuc & TUeuc & \textbf{ATUeuc}\\ \hline 33-leukemia haslinger & \textcolor{red}{\textbf{  0.36}}/  0.32 &   0.44/  0.24 &   0.43/  0.24 &   0.43/  0.24 &   0.43/  0.24 &   0.39/  0.25 &   0.41/  0.24 &   0.42/  0.26 &   0.43/  0.26 &   0.44/  0.24 &   0.43/  0.24 \\
 34-mammographic mass &   0.49/  0.09 &   0.49/  0.11 &   0.48/  0.11 &   0.48/  0.11 &   0.48/  0.11 &   0.47/  0.15 &   0.50/  0.10 &   0.48/\textcolor{black}{\textbf{  0.08}} & \textcolor{red}{\textbf{  0.45}}/  0.13 &   0.49/  0.21 & \textcolor{blue}{\textbf{  0.52}}/\textcolor{black}{\textbf{  0.08}} \\
 35-mfeat fourier &   0.37/  0.04 &   0.37/\textcolor{black}{\textbf{  0.03}} &   0.36/  0.04 &   0.36/  0.04 &   0.41/  0.04 &   0.39/\textcolor{black}{\textbf{  0.03}} &   0.40/  0.04 &   0.38/  0.04 & \textcolor{red}{\textbf{  0.29}}/  0.04 & \textcolor{blue}{\textbf{  0.43}}/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.43}}/\textcolor{black}{\textbf{  0.03}} \\
 36-molecular promotor... &   0.11/\textcolor{black}{\textbf{  0.23}} & \textcolor{blue}{\textbf{  0.14}}/  0.25 & \textcolor{red}{\textbf{  0.05}}/  0.27 & \textcolor{red}{\textbf{  0.05}}/  0.27 & \textcolor{red}{\textbf{  0.05}}/  0.27 &   0.11/  0.26 & \textcolor{blue}{\textbf{  0.14}}/  0.27 &   0.12/\textcolor{black}{\textbf{  0.23}} & \textcolor{blue}{\textbf{  0.14}}/  0.24 &   0.11/  0.25 &   0.09/  0.24 \\
@@ -113,7 +113,7 @@
 \begin{table}[h]
 \caption{ALCKappa para CIELM: Os maiores valores da média e desvio padrão de cada base está em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados estão sublinhados. Os menores valores de desvio padrão estão em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c}
- & LUeuc & ALUeuc & TUman & ATUman & LUman & ALUman & TUmah & ATUmah & LUmah & ALUmah\\ \hline 33-leukemia haslinger & \textcolor{black}{\textbf{  0.45}}/  0.23 &   0.44/  0.26 &   0.44/  0.24 & \textcolor{black}{\textbf{  0.45}}/\textcolor{black}{\textbf{  0.22}} &   0.43/  0.23 & \underline{\textcolor{blue}{\textbf{  0.50}}}/\textcolor{black}{\textbf{  0.22}} & \textcolor{black}{\textbf{  0.45}}/  0.28 &   0.38/  0.26 &   0.39/  0.28 &   0.38/  0.28 \\
+ & \textbf{LUeuc} & \textbf{ALUeuc} & TUman & \textbf{ATUman} & \textbf{LUman} & \textbf{ALUman} & TUmah & \textbf{ATUmah} & \textbf{LUmah} & \textbf{ALUmah}\\ \hline 33-leukemia haslinger & \textcolor{black}{\textbf{  0.45}}/  0.23 &   0.44/  0.26 &   0.44/  0.24 & \textcolor{black}{\textbf{  0.45}}/\textcolor{black}{\textbf{  0.22}} &   0.43/  0.23 & \underline{\textcolor{blue}{\textbf{  0.50}}}/\textcolor{black}{\textbf{  0.22}} & \textcolor{black}{\textbf{  0.45}}/  0.28 &   0.38/  0.26 &   0.39/  0.28 &   0.38/  0.28 \\
 34-mammographic mass &   0.48/  0.17 & \textcolor{blue}{\textbf{  0.52}}/  0.09 &   0.51/  0.11 &   0.50/\textcolor{black}{\textbf{  0.08}} &   0.51/  0.10 &   0.50/  0.09 &   0.51/  0.11 &   0.50/  0.09 & \textcolor{blue}{\textbf{  0.52}}/  0.11 &   0.51/  0.10 \\
 35-mfeat fourier & \textcolor{blue}{\textbf{  0.43}}/\textcolor{black}{\textbf{  0.03}} &   0.42/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.43}}/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.43}}/\textcolor{black}{\textbf{  0.03}} &   0.42/\textcolor{black}{\textbf{  0.03}} &   0.42/\textcolor{darkgreen}{\textbf{  0.02}} &   0.42/  0.04 &   0.42/\textcolor{black}{\textbf{  0.03}} &   0.42/\textcolor{black}{\textbf{  0.03}} &   0.40/  0.04 \\
 36-molecular promotor... &   0.11/  0.29 &   0.06/  0.25 &   0.10/  0.24 &   0.06/  0.26 &   0.12/  0.25 &   0.06/  0.26 & \textcolor{red}{\textbf{  0.05}}/  0.27 &   0.12/\textcolor{black}{\textbf{  0.23}} & \textcolor{red}{\textbf{  0.05}}/  0.27 &   0.12/  0.24 \\
@@ -150,7 +150,7 @@
 \begin{table}[h]
 \caption{ALCKappa para CIELM: Os maiores valores da média e desvio padrão de cada base está em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados estão sublinhados. Os menores valores de desvio padrão estão em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
- & Rnd & Clu & Unc & Ent & Mar & EERent & EERacu & SGmulti & DWeuc & TUeuc & ATUeuc\\ \hline 65-statlog heart & \textcolor{red}{\textbf{  0.47}}/  0.16 &   0.48/  0.18 &   0.51/\textcolor{black}{\textbf{  0.15}} &   0.51/\textcolor{black}{\textbf{  0.15}} &   0.51/\textcolor{black}{\textbf{  0.15}} &   0.50/  0.16 &   0.51/  0.17 &   0.48/  0.17 &   0.50/  0.16 &   0.51/\textcolor{black}{\textbf{  0.15}} &   0.48/  0.18 \\
+ & Rnd & Clu & Unc & Ent & Mar & EERent & EERacu & \textbf{SGmulti} & DWeuc & TUeuc & \textbf{ATUeuc}\\ \hline 65-statlog heart & \textcolor{red}{\textbf{  0.47}}/  0.16 &   0.48/  0.18 &   0.51/\textcolor{black}{\textbf{  0.15}} &   0.51/\textcolor{black}{\textbf{  0.15}} &   0.51/\textcolor{black}{\textbf{  0.15}} &   0.50/  0.16 &   0.51/  0.17 &   0.48/  0.17 &   0.50/  0.16 &   0.51/\textcolor{black}{\textbf{  0.15}} &   0.48/  0.18 \\
 66-statlog image segm... &   0.64/  0.04 &   0.67/  0.04 &   0.52/  0.07 &   0.51/  0.08 &   0.73/  0.05 &   0.62/  0.04 &   0.68/  0.05 &   0.61/  0.05 & \textcolor{red}{\textbf{  0.44}}/  0.05 & \textcolor{black}{\textbf{  0.74}}/\textcolor{black}{\textbf{  0.03}} &   0.67/  0.04 \\
 67-statlog landsat sa... &   0.64/  0.05 &   0.66/  0.03 &   0.63/  0.06 &   0.61/  0.09 & \underline{\textcolor{blue}{\textbf{  0.73}}}/\textcolor{black}{\textbf{  0.02}} &   0.62/  0.06 &   0.69/  0.03 &   0.62/  0.06 & \textcolor{red}{\textbf{  0.39}}/  0.07 &   0.70/  0.03 &   0.65/  0.03 \\
 68-statlog vehicle si... & \textcolor{red}{\textbf{  0.35}}/  0.06 &   0.36/\textcolor{black}{\textbf{  0.05}} &   0.37/\textcolor{black}{\textbf{  0.05}} &   0.36/\textcolor{black}{\textbf{  0.05}} &   0.39/  0.07 & \textcolor{red}{\textbf{  0.35}}/  0.07 &   0.38/  0.08 & \textcolor{red}{\textbf{  0.35}}/\textcolor{black}{\textbf{  0.05}} &   0.40/\textcolor{black}{\textbf{  0.05}} &   0.42/  0.06 &   0.39/  0.06 \\
@@ -185,7 +185,7 @@
 \begin{table}[h]
 \caption{ALCKappa para CIELM: Os maiores valores da média e desvio padrão de cada base está em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados estão sublinhados. Os menores valores de desvio padrão estão em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c}
- & LUeuc & ALUeuc & TUman & ATUman & LUman & ALUman & TUmah & ATUmah & LUmah & ALUmah\\ \hline 65-statlog heart & \textcolor{black}{\textbf{  0.52}}/  0.16 &   0.50/  0.17 &   0.51/  0.16 &   0.49/  0.16 & \underline{\textcolor{blue}{\textbf{  0.53}}}/  0.17 &   0.49/  0.16 & \textcolor{black}{\textbf{  0.52}}/  0.16 &   0.50/  0.17 &   0.51/  0.17 &   0.49/  0.16 \\
+ & \textbf{LUeuc} & \textbf{ALUeuc} & TUman & \textbf{ATUman} & \textbf{LUman} & \textbf{ALUman} & TUmah & \textbf{ATUmah} & \textbf{LUmah} & \textbf{ALUmah}\\ \hline 65-statlog heart & \textcolor{black}{\textbf{  0.52}}/  0.16 &   0.50/  0.17 &   0.51/  0.16 &   0.49/  0.16 & \underline{\textcolor{blue}{\textbf{  0.53}}}/  0.17 &   0.49/  0.16 & \textcolor{black}{\textbf{  0.52}}/  0.16 &   0.50/  0.17 &   0.51/  0.17 &   0.49/  0.16 \\
 66-statlog image segm... &   0.73/\textcolor{black}{\textbf{  0.03}} &   0.66/  0.04 &   0.72/  0.04 &   0.67/\textcolor{black}{\textbf{  0.03}} &   0.71/\textcolor{black}{\textbf{  0.03}} &   0.66/  0.04 & \underline{\textcolor{blue}{\textbf{  0.75}}}/  0.04 &   0.68/\textcolor{black}{\textbf{  0.03}} & \textcolor{black}{\textbf{  0.74}}/\textcolor{black}{\textbf{  0.03}} &   0.68/\textcolor{black}{\textbf{  0.03}} \\
 67-statlog landsat sa... &   0.70/  0.03 &   0.65/  0.03 &   0.68/\textcolor{black}{\textbf{  0.02}} &   0.65/  0.03 &   0.69/  0.03 &   0.66/  0.03 &   0.71/  0.05 &   0.65/  0.03 & \textcolor{black}{\textbf{  0.72}}/  0.04 &   0.65/  0.03 \\
 68-statlog vehicle si... &   0.41/\textcolor{black}{\textbf{  0.05}} &   0.38/\textcolor{black}{\textbf{  0.05}} &   0.41/\textcolor{black}{\textbf{  0.05}} &   0.40/\textcolor{black}{\textbf{  0.05}} &   0.42/\textcolor{black}{\textbf{  0.05}} &   0.40/\textcolor{black}{\textbf{  0.05}} & \textcolor{blue}{\textbf{  0.43}}/\textcolor{black}{\textbf{  0.05}} &   0.40/  0.06 & \textcolor{blue}{\textbf{  0.43}}/\textcolor{black}{\textbf{  0.05}} &   0.40/\textcolor{black}{\textbf{  0.05}} \\
