--- a/stratsALCKappaNB.tex
+++ b/stratsALCKappaNB.tex
@@ -2,7 +2,7 @@
 \begin{table}[h]
 \caption{ALCKappa para NB: Os maiores valores da média e desvio padrão de cada base está em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados estão sublinhados. Os menores valores de desvio padrão estão em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
- & Rnd & Clu & Unc & Ent & Mar & EERent & EERacu & SGmulti & DWeuc & TUeuc & ATUeuc\\ \hline 1-abalone 3class &   0.34/\textcolor{black}{\textbf{  0.02}} &   0.34/\textcolor{black}{\textbf{  0.02}} &   0.25/  0.10 & \textcolor{red}{\textbf{  0.21}}/  0.12 &   0.30/  0.09 &   0.34/  0.03 &   0.31/  0.05 &   0.34/  0.04 &   0.27/  0.08 &   0.34/  0.04 & \textcolor{black}{\textbf{  0.35}}/\textcolor{black}{\textbf{  0.02}} \\
+ & Rnd & Clu & Unc & Ent & Mar & EERent & EERacu & \textbf{SGmulti} & DWeuc & TUeuc & \textbf{ATUeuc}\\ \hline 1-abalone 3class &   0.34/\textcolor{black}{\textbf{  0.02}} &   0.34/\textcolor{black}{\textbf{  0.02}} &   0.25/  0.10 & \textcolor{red}{\textbf{  0.21}}/  0.12 &   0.30/  0.09 &   0.34/  0.03 &   0.31/  0.05 &   0.34/  0.04 &   0.27/  0.08 &   0.34/  0.04 & \textcolor{black}{\textbf{  0.35}}/\textcolor{black}{\textbf{  0.02}} \\
 2-arcene &   0.33/  0.10 &   0.32/\textcolor{black}{\textbf{  0.09}} & \textcolor{black}{\textbf{  0.35}}/  0.10 &   0.32/  0.10 & \textcolor{black}{\textbf{  0.35}}/  0.10 &   0.32/  0.11 & \textcolor{red}{\textbf{  0.31}}/  0.10 &   0.33/  0.10 & \textcolor{black}{\textbf{  0.35}}/  0.10 & \textcolor{black}{\textbf{  0.35}}/  0.10 &   0.33/  0.10 \\
 3-artificial charact... &   0.17/\textcolor{black}{\textbf{  0.02}} &   0.18/\textcolor{black}{\textbf{  0.02}} &   0.13/  0.03 &   0.12/  0.03 &   0.18/  0.03 &   0.18/\textcolor{black}{\textbf{  0.02}} &   0.18/\textcolor{black}{\textbf{  0.02}} &   0.18/  0.03 & \textcolor{red}{\textbf{  0.08}}/\textcolor{black}{\textbf{  0.02}} &   0.19/\textcolor{black}{\textbf{  0.02}} &   0.19/\textcolor{black}{\textbf{  0.02}} \\
 4-autoUniv au1 1000 &   0.10/\textcolor{black}{\textbf{  0.04}} &   0.10/  0.05 &   0.02/  0.07 &   0.03/  0.07 & \textcolor{red}{\textbf{  0.01}}/  0.06 &   0.05/  0.06 &   0.10/  0.05 &   0.04/  0.06 &   0.03/  0.05 &   0.02/  0.06 &   0.11/  0.06 \\
@@ -39,7 +39,7 @@
 \begin{table}[h]
 \caption{ALCKappa para NB: Os maiores valores da média e desvio padrão de cada base está em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados estão sublinhados. Os menores valores de desvio padrão estão em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c}
- & LUeuc & ALUeuc & TUman & ATUman & LUman & ALUman & TUmah & ATUmah & LUmah & ALUmah\\ \hline 1-abalone 3class &   0.34/  0.04 & \textcolor{black}{\textbf{  0.35}}/\textcolor{black}{\textbf{  0.02}} &   0.34/  0.04 & \underline{\textcolor{blue}{\textbf{  0.36}}}/\textcolor{black}{\textbf{  0.02}} &   0.34/  0.04 & \textcolor{black}{\textbf{  0.35}}/\textcolor{black}{\textbf{  0.02}} &   0.29/  0.08 & \textcolor{black}{\textbf{  0.35}}/\textcolor{black}{\textbf{  0.02}} &   0.29/  0.07 & \textcolor{black}{\textbf{  0.35}}/\textcolor{black}{\textbf{  0.02}} \\
+ & \textbf{LUeuc} & \textbf{ALUeuc} & TUman & \textbf{ATUman} & \textbf{LUman} & \textbf{ALUman} & TUmah & \textbf{ATUmah} & \textbf{LUmah} & \textbf{ALUmah}\\ \hline 1-abalone 3class &   0.34/  0.04 & \textcolor{black}{\textbf{  0.35}}/\textcolor{black}{\textbf{  0.02}} &   0.34/  0.04 & \underline{\textcolor{blue}{\textbf{  0.36}}}/\textcolor{black}{\textbf{  0.02}} &   0.34/  0.04 & \textcolor{black}{\textbf{  0.35}}/\textcolor{black}{\textbf{  0.02}} &   0.29/  0.08 & \textcolor{black}{\textbf{  0.35}}/\textcolor{black}{\textbf{  0.02}} &   0.29/  0.07 & \textcolor{black}{\textbf{  0.35}}/\textcolor{black}{\textbf{  0.02}} \\
 2-arcene & \textcolor{black}{\textbf{  0.35}}/  0.10 &   0.33/  0.10 & \textcolor{black}{\textbf{  0.35}}/  0.10 &   0.33/  0.10 & \textcolor{black}{\textbf{  0.35}}/  0.10 &   0.33/  0.10 & \textcolor{black}{\textbf{  0.35}}/\textcolor{black}{\textbf{  0.09}} & \textcolor{red}{\textbf{  0.31}}/  0.10 & \underline{\textcolor{blue}{\textbf{  0.36}}}/\textcolor{black}{\textbf{  0.09}} &   0.32/  0.10 \\
 3-artificial charact... &   0.19/\textcolor{black}{\textbf{  0.02}} &   0.19/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.20}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.20}}/\textcolor{black}{\textbf{  0.02}} &   0.19/\textcolor{darkgreen}{\textbf{  0.01}} &   0.19/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.20}}/\textcolor{black}{\textbf{  0.02}} &   0.19/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.20}}/\textcolor{black}{\textbf{  0.02}} &   0.19/\textcolor{black}{\textbf{  0.02}} \\
 4-autoUniv au1 1000 &   0.02/  0.06 & \textcolor{black}{\textbf{  0.12}}/  0.05 & \textcolor{red}{\textbf{  0.01}}/  0.07 & \textcolor{black}{\textbf{  0.12}}/  0.06 & \textcolor{red}{\textbf{  0.01}}/  0.07 & \underline{\textcolor{blue}{\textbf{  0.13}}}/\textcolor{black}{\textbf{  0.04}} & \textcolor{red}{\textbf{  0.01}}/  0.06 &   0.11/  0.06 & \textcolor{red}{\textbf{  0.01}}/  0.06 & \textcolor{black}{\textbf{  0.12}}/  0.05 \\
@@ -76,7 +76,7 @@
 \begin{table}[h]
 \caption{ALCKappa para NB: Os maiores valores da média e desvio padrão de cada base está em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados estão sublinhados. Os menores valores de desvio padrão estão em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
- & Rnd & Clu & Unc & Ent & Mar & EERent & EERacu & SGmulti & DWeuc & TUeuc & ATUeuc\\ \hline 33-leukemia haslinger &   0.67/  0.12 &   0.68/  0.12 &   0.65/  0.12 &   0.66/  0.12 &   0.65/  0.12 &   0.65/\textcolor{black}{\textbf{  0.11}} & \textcolor{red}{\textbf{  0.62}}/  0.13 &   0.68/\textcolor{black}{\textbf{  0.11}} &   0.65/  0.12 &   0.65/  0.12 & \textcolor{blue}{\textbf{  0.69}}/  0.13 \\
+ & Rnd & Clu & Unc & Ent & Mar & EERent & EERacu & \textbf{SGmulti} & DWeuc & TUeuc & \textbf{ATUeuc}\\ \hline 33-leukemia haslinger &   0.67/  0.12 &   0.68/  0.12 &   0.65/  0.12 &   0.66/  0.12 &   0.65/  0.12 &   0.65/\textcolor{black}{\textbf{  0.11}} & \textcolor{red}{\textbf{  0.62}}/  0.13 &   0.68/\textcolor{black}{\textbf{  0.11}} &   0.65/  0.12 &   0.65/  0.12 & \textcolor{blue}{\textbf{  0.69}}/  0.13 \\
 34-mammographic mass &   0.55/  0.07 &   0.53/  0.07 &   0.41/  0.10 &   0.40/  0.10 &   0.37/  0.17 &   0.48/  0.09 &   0.50/  0.07 &   0.46/  0.11 &   0.37/  0.13 &   0.35/  0.14 & \textcolor{black}{\textbf{  0.56}}/\textcolor{black}{\textbf{  0.05}} \\
 35-mfeat fourier & \textcolor{red}{\textbf{  0.52}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.52}}/  0.03 &   0.54/  0.03 &   0.55/  0.03 &   0.55/  0.04 &   0.55/  0.04 &   0.54/  0.03 &   0.57/\textcolor{black}{\textbf{  0.02}} &   0.53/  0.04 &   0.57/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.59}}/\textcolor{black}{\textbf{  0.02}} \\
 36-molecular promotor... &   0.68/\textcolor{black}{\textbf{  0.08}} &   0.67/\textcolor{darkgreen}{\textbf{  0.07}} &   0.68/\textcolor{black}{\textbf{  0.08}} &   0.67/\textcolor{black}{\textbf{  0.08}} &   0.68/\textcolor{black}{\textbf{  0.08}} &   0.67/  0.10 &   0.69/  0.09 &   0.69/\textcolor{black}{\textbf{  0.08}} & \textcolor{blue}{\textbf{  0.71}}/\textcolor{black}{\textbf{  0.08}} & \textcolor{blue}{\textbf{  0.71}}/\textcolor{black}{\textbf{  0.08}} &   0.69/\textcolor{black}{\textbf{  0.08}} \\
@@ -113,7 +113,7 @@
 \begin{table}[h]
 \caption{ALCKappa para NB: Os maiores valores da média e desvio padrão de cada base está em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados estão sublinhados. Os menores valores de desvio padrão estão em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c}
- & LUeuc & ALUeuc & TUman & ATUman & LUman & ALUman & TUmah & ATUmah & LUmah & ALUmah\\ \hline 33-leukemia haslinger &   0.65/  0.12 &   0.68/  0.13 &   0.65/  0.12 & \textcolor{blue}{\textbf{  0.69}}/\textcolor{black}{\textbf{  0.11}} &   0.65/  0.12 & \textcolor{blue}{\textbf{  0.69}}/  0.13 &   0.67/  0.12 & \textcolor{blue}{\textbf{  0.69}}/  0.12 &   0.67/  0.12 & \textcolor{blue}{\textbf{  0.69}}/  0.12 \\
+ & \textbf{LUeuc} & \textbf{ALUeuc} & TUman & \textbf{ATUman} & \textbf{LUman} & \textbf{ALUman} & TUmah & \textbf{ATUmah} & \textbf{LUmah} & \textbf{ALUmah}\\ \hline 33-leukemia haslinger &   0.65/  0.12 &   0.68/  0.13 &   0.65/  0.12 & \textcolor{blue}{\textbf{  0.69}}/\textcolor{black}{\textbf{  0.11}} &   0.65/  0.12 & \textcolor{blue}{\textbf{  0.69}}/  0.13 &   0.67/  0.12 & \textcolor{blue}{\textbf{  0.69}}/  0.12 &   0.67/  0.12 & \textcolor{blue}{\textbf{  0.69}}/  0.12 \\
 34-mammographic mass &   0.36/  0.12 & \underline{\textcolor{blue}{\textbf{  0.57}}}/  0.06 & \textcolor{red}{\textbf{  0.28}}/  0.21 &   0.55/\textcolor{black}{\textbf{  0.05}} &   0.32/  0.22 &   0.54/  0.07 &   0.32/  0.18 &   0.54/  0.07 &   0.34/  0.12 & \textcolor{black}{\textbf{  0.56}}/\textcolor{black}{\textbf{  0.05}} \\
 35-mfeat fourier &   0.57/  0.03 &   0.57/  0.03 &   0.56/  0.03 & \underline{\textcolor{blue}{\textbf{  0.60}}}/  0.03 &   0.57/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.59}}/\textcolor{black}{\textbf{  0.02}} &   0.55/  0.04 & \textcolor{black}{\textbf{  0.59}}/\textcolor{black}{\textbf{  0.02}} &   0.56/  0.03 &   0.57/\textcolor{black}{\textbf{  0.02}} \\
 36-molecular promotor... & \textcolor{blue}{\textbf{  0.71}}/\textcolor{black}{\textbf{  0.08}} &   0.70/  0.09 &   0.70/\textcolor{black}{\textbf{  0.08}} &   0.70/\textcolor{black}{\textbf{  0.08}} &   0.68/\textcolor{black}{\textbf{  0.08}} &   0.70/  0.10 & \textcolor{red}{\textbf{  0.44}}/  0.12 &   0.53/  0.09 & \textcolor{red}{\textbf{  0.44}}/  0.12 &   0.53/  0.10 \\
@@ -150,7 +150,7 @@
 \begin{table}[h]
 \caption{ALCKappa para NB: Os maiores valores da média e desvio padrão de cada base está em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados estão sublinhados. Os menores valores de desvio padrão estão em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
- & Rnd & Clu & Unc & Ent & Mar & EERent & EERacu & SGmulti & DWeuc & TUeuc & ATUeuc\\ \hline 65-statlog heart &   0.61/\textcolor{black}{\textbf{  0.08}} &   0.61/  0.09 &   0.44/  0.11 &   0.42/  0.14 &   0.44/  0.11 &   0.47/  0.15 &   0.57/  0.09 &   0.58/  0.12 & \textcolor{red}{\textbf{  0.41}}/  0.13 &   0.44/  0.11 &   0.62/  0.10 \\
+ & Rnd & Clu & Unc & Ent & Mar & EERent & EERacu & \textbf{SGmulti} & DWeuc & TUeuc & \textbf{ATUeuc}\\ \hline 65-statlog heart &   0.61/\textcolor{black}{\textbf{  0.08}} &   0.61/  0.09 &   0.44/  0.11 &   0.42/  0.14 &   0.44/  0.11 &   0.47/  0.15 &   0.57/  0.09 &   0.58/  0.12 & \textcolor{red}{\textbf{  0.41}}/  0.13 &   0.44/  0.11 &   0.62/  0.10 \\
 66-statlog image segm... &   0.69/  0.03 &   0.68/  0.04 &   0.63/  0.07 &   0.58/  0.06 &   0.62/  0.07 &   0.68/  0.03 &   0.62/  0.09 & \underline{\textcolor{blue}{\textbf{  0.73}}}/  0.03 & \textcolor{red}{\textbf{  0.54}}/  0.08 &   0.70/  0.05 &   0.71/  0.03 \\
 67-statlog landsat sa... &   0.73/  0.03 &   0.74/\textcolor{black}{\textbf{  0.02}} &   0.72/  0.07 &   0.71/  0.05 &   0.73/  0.05 &   0.73/\textcolor{black}{\textbf{  0.02}} &   0.70/  0.04 & \textcolor{blue}{\textbf{  0.76}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.64}}/  0.08 &   0.75/  0.04 &   0.75/  0.03 \\
 68-statlog vehicle si... &   0.27/\textcolor{black}{\textbf{  0.04}} &   0.28/\textcolor{black}{\textbf{  0.04}} & \textcolor{black}{\textbf{  0.38}}/  0.06 &   0.35/  0.07 &   0.37/  0.06 & \textcolor{red}{\textbf{  0.24}}/  0.05 &   0.31/  0.05 &   0.34/\textcolor{black}{\textbf{  0.04}} & \underline{\textcolor{blue}{\textbf{  0.39}}}/\textcolor{black}{\textbf{  0.04}} &   0.35/  0.05 &   0.28/  0.05 \\
@@ -185,7 +185,7 @@
 \begin{table}[h]
 \caption{ALCKappa para NB: Os maiores valores da média e desvio padrão de cada base está em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados estão sublinhados. Os menores valores de desvio padrão estão em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c}
- & LUeuc & ALUeuc & TUman & ATUman & LUman & ALUman & TUmah & ATUmah & LUmah & ALUmah\\ \hline 65-statlog heart &   0.44/  0.11 &   0.62/  0.09 &   0.44/  0.13 & \textcolor{blue}{\textbf{  0.63}}/  0.09 &   0.43/  0.13 & \textcolor{blue}{\textbf{  0.63}}/  0.09 &   0.43/  0.18 &   0.59/\textcolor{darkgreen}{\textbf{  0.07}} &   0.43/  0.19 &   0.60/  0.09 \\
+ & \textbf{LUeuc} & \textbf{ALUeuc} & TUman & \textbf{ATUman} & \textbf{LUman} & \textbf{ALUman} & TUmah & \textbf{ATUmah} & \textbf{LUmah} & \textbf{ALUmah}\\ \hline 65-statlog heart &   0.44/  0.11 &   0.62/  0.09 &   0.44/  0.13 & \textcolor{blue}{\textbf{  0.63}}/  0.09 &   0.43/  0.13 & \textcolor{blue}{\textbf{  0.63}}/  0.09 &   0.43/  0.18 &   0.59/\textcolor{darkgreen}{\textbf{  0.07}} &   0.43/  0.19 &   0.60/  0.09 \\
 66-statlog image segm... & \textcolor{black}{\textbf{  0.72}}/  0.03 &   0.70/  0.03 &   0.71/  0.03 & \textcolor{black}{\textbf{  0.72}}/\textcolor{black}{\textbf{  0.02}} &   0.71/  0.05 & \textcolor{black}{\textbf{  0.72}}/\textcolor{black}{\textbf{  0.02}} &   0.67/  0.06 &   0.68/  0.03 &   0.69/  0.05 &   0.69/  0.04 \\
 67-statlog landsat sa... &   0.75/  0.03 &   0.75/\textcolor{black}{\textbf{  0.02}} &   0.75/\textcolor{black}{\textbf{  0.02}} &   0.75/  0.03 &   0.75/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.76}}/\textcolor{black}{\textbf{  0.02}} &   0.73/  0.03 &   0.74/\textcolor{black}{\textbf{  0.02}} &   0.74/  0.04 &   0.74/\textcolor{black}{\textbf{  0.02}} \\
 68-statlog vehicle si... &   0.34/\textcolor{black}{\textbf{  0.04}} &   0.27/  0.05 &   0.34/  0.05 &   0.27/  0.05 &   0.35/  0.05 &   0.27/  0.05 &   0.36/  0.05 &   0.28/\textcolor{black}{\textbf{  0.04}} &   0.36/  0.05 &   0.28/\textcolor{black}{\textbf{  0.04}} \\
