--- a/stratsALCKappaSVM.tex
+++ b/stratsALCKappaSVM.tex
@@ -2,7 +2,7 @@
 \begin{table}[h]
 \caption{ALCKappa para SVM: Os maiores valores da média e desvio padrão de cada base está em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados estão sublinhados. Os menores valores de desvio padrão estão em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
- & Rnd & Clu & Unc & Ent & Mar & EERent & EERacu & SGmulti & DWeuc & TUeuc & ATUeuc\\ \hline 1-abalone 3class &   0.24/  0.03 &   0.24/  0.04 &   0.22/  0.05 &   0.25/  0.04 &   0.26/  0.03 &   0.27/  0.04 &   0.26/  0.03 &   0.24/  0.03 & \textcolor{red}{\textbf{  0.19}}/  0.03 &   0.27/  0.03 &   0.24/\textcolor{black}{\textbf{  0.02}} \\
+ & Rnd & Clu & Unc & Ent & Mar & EERent & EERacu & \textbf{SGmulti} & DWeuc & TUeuc & \textbf{ATUeuc}\\ \hline 1-abalone 3class &   0.24/  0.03 &   0.24/  0.04 &   0.22/  0.05 &   0.25/  0.04 &   0.26/  0.03 &   0.27/  0.04 &   0.26/  0.03 &   0.24/  0.03 & \textcolor{red}{\textbf{  0.19}}/  0.03 &   0.27/  0.03 &   0.24/\textcolor{black}{\textbf{  0.02}} \\
 2-arcene & \textcolor{red}{\textbf{  0.00}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.00}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.00}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.00}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.00}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.00}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.00}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.00}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.00}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.00}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.00}}/\textcolor{black}{\textbf{  0.00}} \\
 3-artificial charact... &   0.00/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{ -0.01}}/\textcolor{black}{\textbf{  0.00}} &   0.02/  0.01 &   0.01/  0.01 &   0.02/  0.01 &   0.01/  0.01 &   0.01/  0.01 &   0.00/\textcolor{black}{\textbf{  0.00}} &   0.01/\textcolor{black}{\textbf{  0.00}} &   0.02/  0.01 & \textcolor{red}{\textbf{ -0.01}}/\textcolor{black}{\textbf{  0.00}} \\
 4-autoUniv au1 1000 &   0.01/  0.02 &   0.01/  0.02 &   0.02/  0.04 &   0.03/  0.04 &   0.03/  0.04 &   0.02/  0.02 &   0.02/  0.02 &   0.01/  0.02 & \textcolor{black}{\textbf{  0.04}}/  0.04 &   0.01/  0.02 &   0.01/\textcolor{black}{\textbf{  0.01}} \\
@@ -39,7 +39,7 @@
 \begin{table}[h]
 \caption{ALCKappa para SVM: Os maiores valores da média e desvio padrão de cada base está em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados estão sublinhados. Os menores valores de desvio padrão estão em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c}
- & LUeuc & ALUeuc & TUman & ATUman & LUman & ALUman & TUmah & ATUmah & LUmah & ALUmah\\ \hline 1-abalone 3class &   0.26/\textcolor{black}{\textbf{  0.02}} &   0.24/  0.03 &   0.27/\textcolor{black}{\textbf{  0.02}} &   0.24/\textcolor{black}{\textbf{  0.02}} &   0.27/\textcolor{black}{\textbf{  0.02}} &   0.24/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.31}}/  0.03 & \underline{\textcolor{blue}{\textbf{  0.32}}}/  0.03 & \textcolor{black}{\textbf{  0.31}}/  0.03 &   0.30/  0.03 \\
+ & \textbf{LUeuc} & \textbf{ALUeuc} & TUman & \textbf{ATUman} & \textbf{LUman} & \textbf{ALUman} & TUmah & \textbf{ATUmah} & \textbf{LUmah} & \textbf{ALUmah}\\ \hline 1-abalone 3class &   0.26/\textcolor{black}{\textbf{  0.02}} &   0.24/  0.03 &   0.27/\textcolor{black}{\textbf{  0.02}} &   0.24/\textcolor{black}{\textbf{  0.02}} &   0.27/\textcolor{black}{\textbf{  0.02}} &   0.24/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.31}}/  0.03 & \underline{\textcolor{blue}{\textbf{  0.32}}}/  0.03 & \textcolor{black}{\textbf{  0.31}}/  0.03 &   0.30/  0.03 \\
 2-arcene & \textcolor{red}{\textbf{  0.00}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.00}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.00}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.00}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.00}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.00}}/\textcolor{black}{\textbf{  0.00}} & \underline{\textcolor{blue}{\textbf{  0.48}}}/  0.10 &   0.44/  0.08 & \textcolor{black}{\textbf{  0.47}}/  0.07 &   0.43/  0.09 \\
 3-artificial charact... &   0.02/  0.01 & \textcolor{red}{\textbf{ -0.01}}/\textcolor{black}{\textbf{  0.00}} &   0.01/  0.01 & \textcolor{red}{\textbf{ -0.01}}/\textcolor{black}{\textbf{  0.00}} &   0.01/  0.01 & \textcolor{red}{\textbf{ -0.01}}/\textcolor{black}{\textbf{  0.00}} &   0.18/  0.02 &   0.18/  0.02 & \underline{\textcolor{blue}{\textbf{  0.20}}}/  0.01 & \textcolor{black}{\textbf{  0.19}}/  0.01 \\
 4-autoUniv au1 1000 &   0.01/  0.04 & \textcolor{red}{\textbf{  0.00}}/\textcolor{black}{\textbf{  0.01}} &   0.01/  0.02 &   0.01/  0.02 &   0.01/\textcolor{black}{\textbf{  0.01}} &   0.01/\textcolor{black}{\textbf{  0.01}} & \textcolor{black}{\textbf{  0.04}}/  0.05 &   0.03/  0.03 & \underline{\textcolor{blue}{\textbf{  0.05}}}/  0.05 & \textcolor{black}{\textbf{  0.04}}/  0.04 \\
@@ -76,7 +76,7 @@
 \begin{table}[h]
 \caption{ALCKappa para SVM: Os maiores valores da média e desvio padrão de cada base está em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados estão sublinhados. Os menores valores de desvio padrão estão em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
- & Rnd & Clu & Unc & Ent & Mar & EERent & EERacu & SGmulti & DWeuc & TUeuc & ATUeuc\\ \hline 33-leukemia haslinger & \textcolor{red}{\textbf{  0.00}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.00}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.00}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.00}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.00}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.00}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.00}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.00}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.00}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.00}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.00}}/\textcolor{black}{\textbf{  0.00}} \\
+ & Rnd & Clu & Unc & Ent & Mar & EERent & EERacu & \textbf{SGmulti} & DWeuc & TUeuc & \textbf{ATUeuc}\\ \hline 33-leukemia haslinger & \textcolor{red}{\textbf{  0.00}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.00}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.00}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.00}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.00}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.00}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.00}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.00}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.00}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.00}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.00}}/\textcolor{black}{\textbf{  0.00}} \\
 34-mammographic mass &   0.38/  0.07 &   0.38/  0.05 &   0.37/\textcolor{black}{\textbf{  0.04}} &   0.37/  0.05 &   0.36/  0.06 &   0.40/  0.07 &   0.36/  0.06 &   0.38/  0.07 & \textcolor{red}{\textbf{  0.34}}/  0.05 &   0.38/  0.05 &   0.38/  0.07 \\
 35-mfeat fourier &   0.33/  0.07 &   0.32/  0.05 &   0.41/  0.03 &   0.38/  0.05 &   0.38/  0.05 &   0.36/  0.03 &   0.35/  0.05 &   0.33/  0.07 &   0.42/\textcolor{black}{\textbf{  0.02}} &   0.18/  0.09 &   0.10/  0.05 \\
 36-molecular promotor... &   0.39/  0.11 &   0.39/  0.12 &   0.39/  0.11 &   0.41/  0.09 &   0.38/  0.10 &   0.44/  0.11 &   0.48/  0.11 &   0.39/  0.11 &   0.37/  0.10 &   0.38/  0.12 &   0.30/  0.09 \\
@@ -113,7 +113,7 @@
 \begin{table}[h]
 \caption{ALCKappa para SVM: Os maiores valores da média e desvio padrão de cada base está em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados estão sublinhados. Os menores valores de desvio padrão estão em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c}
- & LUeuc & ALUeuc & TUman & ATUman & LUman & ALUman & TUmah & ATUmah & LUmah & ALUmah\\ \hline 33-leukemia haslinger & \textcolor{red}{\textbf{  0.00}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.00}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.00}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.00}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.00}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.00}}/\textcolor{black}{\textbf{  0.00}} &   0.51/  0.12 & \underline{\textcolor{blue}{\textbf{  0.65}}}/  0.12 &   0.51/  0.13 & \textcolor{black}{\textbf{  0.64}}/  0.13 \\
+ & \textbf{LUeuc} & \textbf{ALUeuc} & TUman & \textbf{ATUman} & \textbf{LUman} & \textbf{ALUman} & TUmah & \textbf{ATUmah} & \textbf{LUmah} & \textbf{ALUmah}\\ \hline 33-leukemia haslinger & \textcolor{red}{\textbf{  0.00}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.00}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.00}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.00}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.00}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.00}}/\textcolor{black}{\textbf{  0.00}} &   0.51/  0.12 & \underline{\textcolor{blue}{\textbf{  0.65}}}/  0.12 &   0.51/  0.13 & \textcolor{black}{\textbf{  0.64}}/  0.13 \\
 34-mammographic mass &   0.36/  0.07 &   0.39/  0.05 &   0.36/  0.07 &   0.39/  0.06 &   0.36/  0.08 &   0.38/  0.06 &   0.52/\textcolor{black}{\textbf{  0.04}} & \textcolor{black}{\textbf{  0.54}}/  0.05 &   0.53/  0.06 & \underline{\textcolor{blue}{\textbf{  0.55}}}/  0.05 \\
 35-mfeat fourier &   0.16/  0.07 &   0.12/  0.06 &   0.15/  0.07 & \textcolor{red}{\textbf{  0.09}}/  0.07 &   0.14/  0.09 &   0.10/  0.05 & \textcolor{blue}{\textbf{  0.54}}/  0.03 &   0.52/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.54}}/\textcolor{black}{\textbf{  0.02}} &   0.53/\textcolor{black}{\textbf{  0.02}} \\
 36-molecular promotor... &   0.34/  0.12 & \textcolor{red}{\textbf{  0.26}}/\textcolor{darkgreen}{\textbf{  0.07}} &   0.34/  0.12 &   0.28/  0.10 &   0.32/  0.14 &   0.30/  0.09 &   0.49/  0.09 & \textcolor{blue}{\textbf{  0.50}}/\textcolor{black}{\textbf{  0.08}} & \textcolor{blue}{\textbf{  0.50}}/\textcolor{black}{\textbf{  0.08}} & \textcolor{blue}{\textbf{  0.50}}/\textcolor{black}{\textbf{  0.08}} \\
@@ -150,7 +150,7 @@
 \begin{table}[h]
 \caption{ALCKappa para SVM: Os maiores valores da média e desvio padrão de cada base está em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados estão sublinhados. Os menores valores de desvio padrão estão em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
- & Rnd & Clu & Unc & Ent & Mar & EERent & EERacu & SGmulti & DWeuc & TUeuc & ATUeuc\\ \hline 65-statlog heart &  -0.01/\textcolor{black}{\textbf{  0.01}} & \textcolor{red}{\textbf{ -0.02}}/  0.02 &  -0.01/\textcolor{black}{\textbf{  0.01}} &  -0.01/\textcolor{black}{\textbf{  0.01}} &   0.00/\textcolor{black}{\textbf{  0.01}} &  -0.01/\textcolor{black}{\textbf{  0.01}} &  -0.01/\textcolor{black}{\textbf{  0.01}} &  -0.01/\textcolor{black}{\textbf{  0.01}} &  -0.01/\textcolor{black}{\textbf{  0.01}} &  -0.01/\textcolor{black}{\textbf{  0.01}} &  -0.01/\textcolor{black}{\textbf{  0.01}} \\
+ & Rnd & Clu & Unc & Ent & Mar & EERent & EERacu & \textbf{SGmulti} & DWeuc & TUeuc & \textbf{ATUeuc}\\ \hline 65-statlog heart &  -0.01/\textcolor{black}{\textbf{  0.01}} & \textcolor{red}{\textbf{ -0.02}}/  0.02 &  -0.01/\textcolor{black}{\textbf{  0.01}} &  -0.01/\textcolor{black}{\textbf{  0.01}} &   0.00/\textcolor{black}{\textbf{  0.01}} &  -0.01/\textcolor{black}{\textbf{  0.01}} &  -0.01/\textcolor{black}{\textbf{  0.01}} &  -0.01/\textcolor{black}{\textbf{  0.01}} &  -0.01/\textcolor{black}{\textbf{  0.01}} &  -0.01/\textcolor{black}{\textbf{  0.01}} &  -0.01/\textcolor{black}{\textbf{  0.01}} \\
 66-statlog image segm... &  -0.01/  0.01 &  -0.01/\textcolor{black}{\textbf{  0.00}} &   0.02/  0.02 &   0.02/  0.02 &   0.02/  0.02 &   0.03/  0.01 &   0.03/  0.01 &  -0.01/  0.01 &   0.02/\textcolor{black}{\textbf{  0.00}} &   0.04/  0.01 & \textcolor{red}{\textbf{ -0.02}}/\textcolor{black}{\textbf{  0.00}} \\
 67-statlog landsat sa... & \textcolor{red}{\textbf{  0.00}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.00}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.00}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.00}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.00}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.00}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.00}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.00}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.00}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.00}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.00}}/\textcolor{black}{\textbf{  0.00}} \\
 68-statlog vehicle si... &   0.00/\textcolor{black}{\textbf{  0.00}} &   0.00/\textcolor{black}{\textbf{  0.00}} &   0.00/\textcolor{black}{\textbf{  0.00}} &   0.00/\textcolor{black}{\textbf{  0.00}} &   0.00/\textcolor{black}{\textbf{  0.00}} &   0.00/\textcolor{black}{\textbf{  0.00}} &   0.00/\textcolor{black}{\textbf{  0.00}} &   0.00/\textcolor{black}{\textbf{  0.00}} &   0.00/\textcolor{black}{\textbf{  0.00}} &   0.00/\textcolor{black}{\textbf{  0.00}} &   0.00/\textcolor{black}{\textbf{  0.00}} \\
@@ -185,7 +185,7 @@
 \begin{table}[h]
 \caption{ALCKappa para SVM: Os maiores valores da média e desvio padrão de cada base está em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados estão sublinhados. Os menores valores de desvio padrão estão em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c}
- & LUeuc & ALUeuc & TUman & ATUman & LUman & ALUman & TUmah & ATUmah & LUmah & ALUmah\\ \hline 65-statlog heart &  -0.01/  0.02 &  -0.01/  0.02 &  -0.01/\textcolor{black}{\textbf{  0.01}} &  -0.01/  0.02 &  -0.01/  0.02 &  -0.01/  0.02 &   0.56/  0.07 & \textcolor{blue}{\textbf{  0.57}}/  0.08 &   0.56/  0.07 & \textcolor{blue}{\textbf{  0.57}}/  0.08 \\
+ & \textbf{LUeuc} & \textbf{ALUeuc} & TUman & \textbf{ATUman} & \textbf{LUman} & \textbf{ALUman} & TUmah & \textbf{ATUmah} & \textbf{LUmah} & \textbf{ALUmah}\\ \hline 65-statlog heart &  -0.01/  0.02 &  -0.01/  0.02 &  -0.01/\textcolor{black}{\textbf{  0.01}} &  -0.01/  0.02 &  -0.01/  0.02 &  -0.01/  0.02 &   0.56/  0.07 & \textcolor{blue}{\textbf{  0.57}}/  0.08 &   0.56/  0.07 & \textcolor{blue}{\textbf{  0.57}}/  0.08 \\
 66-statlog image segm... &   0.04/  0.01 &  -0.01/  0.01 &   0.03/  0.01 & \textcolor{red}{\textbf{ -0.02}}/\textcolor{black}{\textbf{  0.00}} &   0.03/  0.01 & \textcolor{red}{\textbf{ -0.02}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{blue}{\textbf{  0.76}}/  0.02 &   0.74/  0.01 & \textcolor{blue}{\textbf{  0.76}}/  0.01 &   0.74/  0.02 \\
 67-statlog landsat sa... & \textcolor{red}{\textbf{  0.00}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.00}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.00}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.00}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.00}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.00}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{blue}{\textbf{  0.76}}/  0.02 &   0.75/  0.02 & \textcolor{blue}{\textbf{  0.76}}/  0.02 &   0.75/  0.02 \\
 68-statlog vehicle si... &   0.00/\textcolor{black}{\textbf{  0.00}} &   0.00/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{ -0.01}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{ -0.01}}/\textcolor{black}{\textbf{  0.00}} &   0.00/\textcolor{black}{\textbf{  0.00}} &   0.00/\textcolor{black}{\textbf{  0.00}} & \textcolor{blue}{\textbf{  0.48}}/  0.03 &   0.45/  0.03 & \textcolor{blue}{\textbf{  0.48}}/  0.02 &   0.46/  0.03 \\
