--- a/stratsALCKappaVFDT.tex
+++ b/stratsALCKappaVFDT.tex
@@ -2,7 +2,7 @@
 \begin{table}[h]
 \caption{ALCKappa para VFDT: Os maiores valores da média e desvio padrão de cada base está em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados estão sublinhados. Os menores valores de desvio padrão estão em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
- & Rnd & Clu & Unc & Ent & Mar & EERent & EERacu & SGmulti & DWeuc & TUeuc & ATUeuc\\ \hline 1-abalone 3class &   0.34/\textcolor{black}{\textbf{  0.02}} &   0.34/\textcolor{black}{\textbf{  0.02}} &   0.23/  0.06 &   0.21/  0.07 &   0.28/  0.05 &   0.34/\textcolor{black}{\textbf{  0.02}} &   0.30/  0.06 &   0.34/  0.03 & \textcolor{red}{\textbf{  0.17}}/  0.07 &   0.34/\textcolor{black}{\textbf{  0.02}} &   0.35/\textcolor{black}{\textbf{  0.02}} \\
+ & Rnd & Clu & Unc & Ent & Mar & EERent & EERacu & \textbf{SGmulti} & DWeuc & TUeuc & \textbf{ATUeuc}\\ \hline 1-abalone 3class &   0.34/\textcolor{black}{\textbf{  0.02}} &   0.34/\textcolor{black}{\textbf{  0.02}} &   0.23/  0.06 &   0.21/  0.07 &   0.28/  0.05 &   0.34/\textcolor{black}{\textbf{  0.02}} &   0.30/  0.06 &   0.34/  0.03 & \textcolor{red}{\textbf{  0.17}}/  0.07 &   0.34/\textcolor{black}{\textbf{  0.02}} &   0.35/\textcolor{black}{\textbf{  0.02}} \\
 2-arcene & \textcolor{black}{\textbf{  0.33}}/  0.10 &   0.32/\textcolor{black}{\textbf{  0.09}} &   0.32/  0.10 & \textcolor{red}{\textbf{  0.30}}/  0.11 & \textcolor{black}{\textbf{  0.33}}/  0.10 &   0.31/  0.12 &   0.32/\textcolor{black}{\textbf{  0.09}} & \textcolor{black}{\textbf{  0.33}}/  0.10 & \textcolor{black}{\textbf{  0.33}}/  0.10 & \textcolor{black}{\textbf{  0.33}}/  0.11 & \textcolor{black}{\textbf{  0.33}}/  0.10 \\
 3-artificial charact... &   0.16/  0.02 &   0.16/\textcolor{black}{\textbf{  0.01}} &   0.13/  0.04 &   0.11/  0.05 &   0.18/  0.04 &   0.17/  0.02 &   0.17/  0.02 &   0.14/  0.02 & \textcolor{red}{\textbf{  0.08}}/  0.04 & \textcolor{black}{\textbf{  0.19}}/\textcolor{black}{\textbf{  0.01}} &   0.18/\textcolor{black}{\textbf{  0.01}} \\
 4-autoUniv au1 1000 &   0.01/  0.02 & \textcolor{black}{\textbf{  0.02}}/  0.03 &   0.01/  0.02 & \textcolor{red}{\textbf{  0.00}}/\textcolor{black}{\textbf{  0.01}} &   0.01/\textcolor{black}{\textbf{  0.01}} & \textcolor{red}{\textbf{  0.00}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{black}{\textbf{  0.02}}/  0.03 &   0.01/\textcolor{black}{\textbf{  0.01}} & \underline{\textcolor{blue}{\textbf{  0.03}}}/  0.06 &   0.01/  0.04 & \textcolor{black}{\textbf{  0.02}}/  0.04 \\
@@ -39,7 +39,7 @@
 \begin{table}[h]
 \caption{ALCKappa para VFDT: Os maiores valores da média e desvio padrão de cada base está em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados estão sublinhados. Os menores valores de desvio padrão estão em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c}
- & LUeuc & ALUeuc & TUman & ATUman & LUman & ALUman & TUmah & ATUmah & LUmah & ALUmah\\ \hline 1-abalone 3class &   0.34/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.36}}/\textcolor{black}{\textbf{  0.02}} &   0.34/  0.04 & \textcolor{blue}{\textbf{  0.36}}/\textcolor{black}{\textbf{  0.02}} &   0.34/  0.03 &   0.35/\textcolor{black}{\textbf{  0.02}} &   0.33/  0.03 &   0.34/\textcolor{black}{\textbf{  0.02}} &   0.33/  0.04 &   0.34/\textcolor{black}{\textbf{  0.02}} \\
+ & \textbf{LUeuc} & \textbf{ALUeuc} & TUman & \textbf{ATUman} & \textbf{LUman} & \textbf{ALUman} & TUmah & \textbf{ATUmah} & \textbf{LUmah} & \textbf{ALUmah}\\ \hline 1-abalone 3class &   0.34/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.36}}/\textcolor{black}{\textbf{  0.02}} &   0.34/  0.04 & \textcolor{blue}{\textbf{  0.36}}/\textcolor{black}{\textbf{  0.02}} &   0.34/  0.03 &   0.35/\textcolor{black}{\textbf{  0.02}} &   0.33/  0.03 &   0.34/\textcolor{black}{\textbf{  0.02}} &   0.33/  0.04 &   0.34/\textcolor{black}{\textbf{  0.02}} \\
 2-arcene & \textcolor{black}{\textbf{  0.33}}/  0.11 & \textcolor{black}{\textbf{  0.33}}/  0.10 &   0.32/  0.11 &   0.32/  0.10 &   0.31/  0.11 & \textcolor{black}{\textbf{  0.33}}/  0.10 & \textcolor{black}{\textbf{  0.33}}/  0.10 &   0.32/  0.10 & \underline{\textcolor{blue}{\textbf{  0.34}}}/  0.10 &   0.32/  0.10 \\
 3-artificial charact... &   0.18/  0.03 &   0.17/  0.02 & \textcolor{black}{\textbf{  0.19}}/  0.02 &   0.18/\textcolor{black}{\textbf{  0.01}} & \textcolor{black}{\textbf{  0.19}}/  0.02 &   0.17/\textcolor{black}{\textbf{  0.01}} & \underline{\textcolor{blue}{\textbf{  0.20}}}/  0.02 &   0.18/\textcolor{black}{\textbf{  0.01}} & \textcolor{black}{\textbf{  0.19}}/  0.02 &   0.18/  0.02 \\
 4-autoUniv au1 1000 &   0.01/  0.04 & \textcolor{black}{\textbf{  0.02}}/  0.02 &   0.01/  0.04 & \textcolor{black}{\textbf{  0.02}}/  0.03 &   0.01/  0.04 & \textcolor{black}{\textbf{  0.02}}/  0.03 & \textcolor{red}{\textbf{  0.00}}/\textcolor{black}{\textbf{  0.01}} &   0.01/  0.02 & \textcolor{red}{\textbf{  0.00}}/\textcolor{black}{\textbf{  0.01}} &   0.01/  0.02 \\
@@ -76,7 +76,7 @@
 \begin{table}[h]
 \caption{ALCKappa para VFDT: Os maiores valores da média e desvio padrão de cada base está em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados estão sublinhados. Os menores valores de desvio padrão estão em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
- & Rnd & Clu & Unc & Ent & Mar & EERent & EERacu & SGmulti & DWeuc & TUeuc & ATUeuc\\ \hline 33-leukemia haslinger &   0.66/  0.13 &   0.65/  0.12 & \textcolor{red}{\textbf{  0.61}}/  0.12 &   0.62/  0.12 & \textcolor{red}{\textbf{  0.61}}/\textcolor{black}{\textbf{  0.11}} & \textcolor{red}{\textbf{  0.61}}/  0.13 &   0.62/  0.14 &   0.66/  0.13 &   0.62/\textcolor{black}{\textbf{  0.11}} &   0.62/  0.13 &   0.66/  0.13 \\
+ & Rnd & Clu & Unc & Ent & Mar & EERent & EERacu & \textbf{SGmulti} & DWeuc & TUeuc & \textbf{ATUeuc}\\ \hline 33-leukemia haslinger &   0.66/  0.13 &   0.65/  0.12 & \textcolor{red}{\textbf{  0.61}}/  0.12 &   0.62/  0.12 & \textcolor{red}{\textbf{  0.61}}/\textcolor{black}{\textbf{  0.11}} & \textcolor{red}{\textbf{  0.61}}/  0.13 &   0.62/  0.14 &   0.66/  0.13 &   0.62/\textcolor{black}{\textbf{  0.11}} &   0.62/  0.13 &   0.66/  0.13 \\
 34-mammographic mass &   0.55/  0.06 &   0.53/  0.07 &   0.39/  0.10 &   0.38/  0.11 &   0.39/  0.10 &   0.50/  0.07 &   0.51/  0.09 &   0.44/  0.09 & \textcolor{red}{\textbf{  0.34}}/  0.11 &   0.40/  0.08 & \textcolor{blue}{\textbf{  0.58}}/  0.06 \\
 35-mfeat fourier &   0.52/\textcolor{black}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.51}}/  0.03 &   0.55/  0.04 &   0.55/  0.04 &   0.55/  0.04 &   0.56/  0.03 &   0.55/\textcolor{black}{\textbf{  0.02}} &   0.57/\textcolor{black}{\textbf{  0.02}} &   0.53/  0.05 &   0.56/  0.03 & \textcolor{blue}{\textbf{  0.59}}/\textcolor{black}{\textbf{  0.02}} \\
 36-molecular promotor... &   0.67/  0.10 &   0.66/\textcolor{black}{\textbf{  0.07}} &   0.64/  0.09 &   0.64/  0.09 &   0.64/  0.09 &   0.66/  0.10 &   0.69/  0.09 &   0.68/  0.09 &   0.68/  0.09 &   0.67/  0.09 &   0.69/  0.09 \\
@@ -113,7 +113,7 @@
 \begin{table}[h]
 \caption{ALCKappa para VFDT: Os maiores valores da média e desvio padrão de cada base está em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados estão sublinhados. Os menores valores de desvio padrão estão em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c}
- & LUeuc & ALUeuc & TUman & ATUman & LUman & ALUman & TUmah & ATUmah & LUmah & ALUmah\\ \hline 33-leukemia haslinger &   0.62/  0.13 &   0.67/  0.14 &   0.63/  0.13 & \textcolor{blue}{\textbf{  0.68}}/  0.12 &   0.63/  0.14 & \textcolor{blue}{\textbf{  0.68}}/  0.13 &   0.62/  0.14 &   0.66/  0.14 &   0.62/  0.14 &   0.67/  0.13 \\
+ & \textbf{LUeuc} & \textbf{ALUeuc} & TUman & \textbf{ATUman} & \textbf{LUman} & \textbf{ALUman} & TUmah & \textbf{ATUmah} & \textbf{LUmah} & \textbf{ALUmah}\\ \hline 33-leukemia haslinger &   0.62/  0.13 &   0.67/  0.14 &   0.63/  0.13 & \textcolor{blue}{\textbf{  0.68}}/  0.12 &   0.63/  0.14 & \textcolor{blue}{\textbf{  0.68}}/  0.13 &   0.62/  0.14 &   0.66/  0.14 &   0.62/  0.14 &   0.67/  0.13 \\
 34-mammographic mass &   0.40/  0.09 & \textcolor{blue}{\textbf{  0.58}}/  0.05 &   0.41/  0.09 &   0.55/\textcolor{black}{\textbf{  0.04}} &   0.42/  0.10 &   0.56/\textcolor{black}{\textbf{  0.04}} &   0.40/  0.10 &   0.56/  0.05 &   0.41/  0.10 &   0.56/  0.05 \\
 35-mfeat fourier &   0.57/  0.03 &   0.57/  0.03 &   0.56/  0.03 & \textcolor{blue}{\textbf{  0.59}}/\textcolor{black}{\textbf{  0.02}} &   0.56/  0.03 & \textcolor{blue}{\textbf{  0.59}}/\textcolor{black}{\textbf{  0.02}} &   0.55/  0.04 &   0.58/\textcolor{black}{\textbf{  0.02}} &   0.54/  0.05 &   0.56/  0.03 \\
 36-molecular promotor... &   0.69/  0.08 & \textcolor{blue}{\textbf{  0.70}}/  0.09 &   0.68/  0.08 &   0.69/  0.09 &   0.68/\textcolor{black}{\textbf{  0.07}} & \textcolor{blue}{\textbf{  0.70}}/  0.10 &   0.45/  0.10 &   0.53/\textcolor{black}{\textbf{  0.07}} & \textcolor{red}{\textbf{  0.44}}/  0.10 &   0.53/\textcolor{black}{\textbf{  0.07}} \\
@@ -150,7 +150,7 @@
 \begin{table}[h]
 \caption{ALCKappa para VFDT: Os maiores valores da média e desvio padrão de cada base está em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados estão sublinhados. Os menores valores de desvio padrão estão em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
- & Rnd & Clu & Unc & Ent & Mar & EERent & EERacu & SGmulti & DWeuc & TUeuc & ATUeuc\\ \hline 65-statlog heart &   0.61/\textcolor{black}{\textbf{  0.08}} &   0.60/  0.09 &   0.52/\textcolor{black}{\textbf{  0.08}} &   0.51/  0.09 &   0.53/  0.09 &   0.52/  0.13 &   0.58/  0.11 &   0.56/  0.14 & \textcolor{red}{\textbf{  0.43}}/  0.14 &   0.56/  0.11 &   0.62/  0.09 \\
+ & Rnd & Clu & Unc & Ent & Mar & EERent & EERacu & \textbf{SGmulti} & DWeuc & TUeuc & \textbf{ATUeuc}\\ \hline 65-statlog heart &   0.61/\textcolor{black}{\textbf{  0.08}} &   0.60/  0.09 &   0.52/\textcolor{black}{\textbf{  0.08}} &   0.51/  0.09 &   0.53/  0.09 &   0.52/  0.13 &   0.58/  0.11 &   0.56/  0.14 & \textcolor{red}{\textbf{  0.43}}/  0.14 &   0.56/  0.11 &   0.62/  0.09 \\
 66-statlog image segm... &   0.67/  0.04 &   0.66/  0.03 &   0.59/  0.08 &   0.55/  0.09 &   0.59/  0.09 &   0.66/  0.04 &   0.65/  0.04 & \underline{\textcolor{blue}{\textbf{  0.71}}}/  0.03 & \textcolor{red}{\textbf{  0.50}}/  0.10 &   0.65/  0.06 &   0.69/  0.03 \\
 67-statlog landsat sa... &   0.71/  0.03 &   0.72/\textcolor{black}{\textbf{  0.02}} &   0.70/  0.06 &   0.70/  0.05 &   0.70/  0.06 &   0.72/  0.03 &   0.71/  0.03 & \textcolor{blue}{\textbf{  0.74}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.60}}/  0.09 &   0.73/  0.03 &   0.73/  0.03 \\
 68-statlog vehicle si... &   0.27/\textcolor{black}{\textbf{  0.04}} &   0.28/\textcolor{black}{\textbf{  0.04}} &   0.34/  0.05 &   0.36/  0.06 &   0.34/  0.06 & \textcolor{red}{\textbf{  0.24}}/  0.05 &   0.31/\textcolor{black}{\textbf{  0.04}} &   0.32/\textcolor{black}{\textbf{  0.04}} & \underline{\textcolor{blue}{\textbf{  0.38}}}/  0.05 &   0.35/  0.06 &   0.28/\textcolor{black}{\textbf{  0.04}} \\
@@ -185,7 +185,7 @@
 \begin{table}[h]
 \caption{ALCKappa para VFDT: Os maiores valores da média e desvio padrão de cada base está em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados estão sublinhados. Os menores valores de desvio padrão estão em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c}
- & LUeuc & ALUeuc & TUman & ATUman & LUman & ALUman & TUmah & ATUmah & LUmah & ALUmah\\ \hline 65-statlog heart &   0.56/  0.10 &   0.62/  0.09 &   0.55/  0.09 &   0.61/\textcolor{black}{\textbf{  0.08}} &   0.55/\textcolor{black}{\textbf{  0.08}} & \textcolor{blue}{\textbf{  0.63}}/  0.09 &   0.55/  0.09 &   0.61/\textcolor{black}{\textbf{  0.08}} &   0.54/  0.09 & \textcolor{blue}{\textbf{  0.63}}/  0.09 \\
+ & \textbf{LUeuc} & \textbf{ALUeuc} & TUman & \textbf{ATUman} & \textbf{LUman} & \textbf{ALUman} & TUmah & \textbf{ATUmah} & \textbf{LUmah} & \textbf{ALUmah}\\ \hline 65-statlog heart &   0.56/  0.10 &   0.62/  0.09 &   0.55/  0.09 &   0.61/\textcolor{black}{\textbf{  0.08}} &   0.55/\textcolor{black}{\textbf{  0.08}} & \textcolor{blue}{\textbf{  0.63}}/  0.09 &   0.55/  0.09 &   0.61/\textcolor{black}{\textbf{  0.08}} &   0.54/  0.09 & \textcolor{blue}{\textbf{  0.63}}/  0.09 \\
 66-statlog image segm... &   0.65/  0.06 &   0.68/  0.03 &   0.65/  0.06 & \textcolor{black}{\textbf{  0.70}}/\textcolor{black}{\textbf{  0.02}} &   0.68/  0.05 & \textcolor{black}{\textbf{  0.70}}/\textcolor{black}{\textbf{  0.02}} &   0.63/  0.06 &   0.66/\textcolor{black}{\textbf{  0.02}} &   0.62/  0.07 &   0.66/  0.03 \\
 67-statlog landsat sa... &   0.73/  0.03 &   0.73/\textcolor{black}{\textbf{  0.02}} &   0.73/  0.03 & \textcolor{blue}{\textbf{  0.74}}/  0.03 & \textcolor{blue}{\textbf{  0.74}}/  0.03 & \textcolor{blue}{\textbf{  0.74}}/\textcolor{black}{\textbf{  0.02}} &   0.70/  0.05 &   0.73/\textcolor{black}{\textbf{  0.02}} &   0.70/  0.04 &   0.72/\textcolor{black}{\textbf{  0.02}} \\
 68-statlog vehicle si... &   0.35/\textcolor{black}{\textbf{  0.04}} &   0.27/\textcolor{black}{\textbf{  0.04}} &   0.36/\textcolor{black}{\textbf{  0.04}} &   0.27/\textcolor{black}{\textbf{  0.04}} &   0.36/  0.05 &   0.27/\textcolor{black}{\textbf{  0.04}} &   0.35/\textcolor{black}{\textbf{  0.04}} &   0.29/\textcolor{black}{\textbf{  0.04}} & \textcolor{black}{\textbf{  0.37}}/\textcolor{black}{\textbf{  0.04}} &   0.29/\textcolor{black}{\textbf{  0.04}} \\
